--- a/Real MySQL(1)/04_아키텍처.md
+++ b/Real MySQL(1)/04_아키텍처.md
@@ -116,9 +116,20 @@ InnoDB는 MySQL에서 사용할 수 있는 스토리지 엔진 중 거의 유일
   * 💠버퍼 풀의 적재 내용 확인
     * MySQL 8.0 버전부터 information_schema 데이터베이스에 innodb_cached_indexes 테이블이 추가되어 테이블의 인덱스별로 데이터 페이지가 얼마나 InnoDB 버퍼 풀에 적재돼 있는지 확인할 수 있다.
 * **Double Write Buffer**
-* **언두 로그**
+  * InnoDB 스토리지 엔진의 리두 로그는 리두 로그 공간의 낭비를 막기 위해 페이지의 변경된 내용만 기록한다. 이로 인해 InnoDB 스토리지 엔진에서 더티 페이지를 디스크 파일로 플러시할 때 일부만 기록되는 문제가 발생하면 그 페이지의 내용은 복구할 수 없을 수도 있다.
+  * InnoDB 스토리지 엔진에서는 이러한 문제를 막기 위해 데이터를 두 번 기록하는 Double-Write 기법을 이용한다.
+  * 데이터의 무결성이 매우 중요한 서비스에서는 DoubleWrite의 활성화를 고려하는 것이 좋다.
+* **언두 로그**   
+✏️ `언두 로그`: InnoDB 스토리지 엔진은 **트랜잭션**과 **격리 수준을 보장하기 위해** DML(INSERT, UPDATE, DELETE)로 변경되기 이전 버전의 데이터를 별도로 백업하는데, 백업된 데이터를 업두 로그(Undo Log)라고 한다. 
   * 언두 로드 레코드 모니터링
+    * MySQL 5.5 이전 버전의 MySQL 서버에서는 언두 로그 공간의 사용 공간이 한 번 늘어나면 MySQL 서버를 새로 구축하지 않는 한 줄일 수 없었다.
+    * MySQL 8.0에서는 언두 로그를 돌아가면서 순차적으로 사용해 디스크 공간을 줄이는 것도 가능하며, 때로는 MySQL 서버가 필요한 시점에 사용 공간을 자동으로 줄여 주기도 한다.
   * 언두 테이블스페이스 관리
+    * ✏️ `테이블스페이스`: 언두 로그가 저장되는 공간
+    * MySQL 5.6 이전 버전에서는 언두 로그가 모두 시스템 테이블스페이스에 저장됐다. 하지만 시스템 테이블스페이스의 언두 로그는 MySQL 서버가 초기화될 때 생성되기 때문에 확장의 한계가 있었다.
+    * 그래서 MySQL 5.6 버전에서는 `innodb_undo-tablespaces` 시스템 변수가 도입되어 값을 변경하여 별도의 언두 로그 파일을 사용할 수 있었다
+    * MySQL 8.0에서는 `innodb_undo-tablespaces` 시스템 변수는 Deprecated되고 언두 로그는 항상 시스템 테이블스페이스 외부의 별도 로그 파일에 기록되도록 개선됐다.
+    * ✏️ `Undo tablespace truncate`: 언두 테이블스페이스 공간을 필요한 만큼만 남기고 불필요하거나 과도하게 할당된 공간을 운영체제로 반납하는 것. 언두 테이블스페이스의 불필요한 공간을 잘라내는(Truncate) 방법은 자동과 수동 두가지 방법이 있고, MySQL 8.0부터 지원된다.
 * **체인지 버퍼**
 * **리두 로그 및 로그 버퍼**
   * 리두 로그 아카이빙
@@ -128,5 +139,12 @@ InnoDB는 MySQL에서 사용할 수 있는 스토리지 엔진 중 거의 유일
 </br>
 
 ## 🦅 4.3 MyISAM 스토리지 엔진 아키텍처
+* **키 캐시**
+* **운영체제의 캐시 및 버퍼**
+* **데이터 파일과 프라이머리 키(인덱스) 구조**
 
 ## 🦅 4.4 MYSQL 로그 파일
+* **에러 로그 파일**
+* **제너럴 쿼리 로그 파일(제너럴 로그 파일, General log)**
+* **슬로우 쿼리 로그**
+
