--- a/Real MySQL(1)/04_아키텍처.md
+++ b/Real MySQL(1)/04_아키텍처.md
@@ -131,20 +131,34 @@ InnoDB는 MySQL에서 사용할 수 있는 스토리지 엔진 중 거의 유일
     * MySQL 8.0에서는 `innodb_undo-tablespaces` 시스템 변수는 Deprecated되고 언두 로그는 항상 시스템 테이블스페이스 외부의 별도 로그 파일에 기록되도록 개선됐다.
     * ✏️ `Undo tablespace truncate`: 언두 테이블스페이스 공간을 필요한 만큼만 남기고 불필요하거나 과도하게 할당된 공간을 운영체제로 반납하는 것. 언두 테이블스페이스의 불필요한 공간을 잘라내는(Truncate) 방법은 자동과 수동 두가지 방법이 있고, MySQL 8.0부터 지원된다.
 * **체인지 버퍼**
-* **리두 로그 및 로그 버퍼**
+  * RDMS에서 레코드가 INSERT되거나 UPDATE될 때는 데이터 파일을 변경하는 작업뿐 아니라 해당 테이블에 포함된 인덱스를 업데이트하는 작업도 필요하다.
+  * 그런데 인덱스를 업데이트하는 작업은 랜덤하게 디스크를 읽는 작업이 필요하므로 테이블에 인덱스가 많다면 이 작업은 상당히 많은 자원을 소모하게 된다.
+  * 따라서 InnoDB는 변경해야 할 인덱스 페이지가 버퍼 풀에 있으면 바로 업데이트를 수행하지만 그렇지 않다면 즉시 실행하지 않고 임시 공간에 저장해두고 사용자에게 결과를 반환하는 형태로 성능을 향상시키게 되는데 이 때 사용하는 임시 메모리 공간을 `체인지 버퍼`라고 한다.
+* **리두 로그 및 로그 버퍼**   
+리두로그는 하드웨어나 소프트웨어 등 여러 가지 문제점으로 인해 MySQL 서버가 비정상적으로 종료됐을 때 데이터 파일에 기록되지 못한 데이터를 잃지 않게 해주는 안전장치다.
   * 리두 로그 아카이빙
   * 리두 로그 활성화 및 비활성화
 * **어댑티브 해시 인덱스**
+  * 어댑티브 해시 인덱스는 사용자가 수동으로 생성하는 인덱스가 아니라 InnoDB 스토리지 엔진에서 사용자가 자주 요청하는 데이터에 대해 자동으로 생성하는 인덱스이며, 사용자는 `innodb-adaptive_hash_index` 시스템 변수를 이용해서 어댑티브 해시 인덱스 기능을 활성화하거나 비활성화할 수 있다.
+  * 어댑티브 해시 인덱스는 B-Tree 검색 시간을 줄여주기 위해 도입된 기능이다.
 * **InnoDB와 MyISAM, MEMORY 스토리지 엔진 비교**
+  * MySQL 8.0부터 MySQL 서버의 모든 시스템 테이블이 InnoDB 스토리지 엔진으로 교체됐고, 공간 좌표 검색, 전문 검색 기능 모두 InnoDB 스토리지 엔진을 지원하도록 개선되었다.
+  * MySQL 8.0 버전부터는 MySQL 서버의 모든 기능을 InnoDB 스토리지 엔진만으로 구현할 수 있게되어 MyISAM 스토리지 엔진의 기능은 도태되는 상황이다.
 </br>
 
 ## 🦅 4.3 MyISAM 스토리지 엔진 아키텍처
 * **키 캐시**
+  * InnoDB 버퍼 풀과 비슷한 역할을 하는 것이 MyISAM의 키 캐시다.
+  * MyISAM 키 캐시는 인덱스만을 대상으로 작동하며, 인덱스의 디스크 쓰기 작업에 대해서만 부분적으로 버퍼링 역할을 한다.
 * **운영체제의 캐시 및 버퍼**
+  * MyISAM은 키 캐시를 이용해 디스크를 검색하지 않고도 충분히 빠르게 검색할 수 있지만, 테이블의 데이터에 대해서는 디스크로부터의 I/O를 해결해 줄만한 어떠한 캐시나 버퍼링 기능도 가지고 있지 않다.
 * **데이터 파일과 프라이머리 키(인덱스) 구조**
-
+  * InnoDB 스토리지 엔진을 사용하는 테이블은 프라이머리 키에 의해 클러스터링되어 저장되는 반면, MyISAM 테이블은 프라이머리 키에 의한 클러스터링 없이 INSERT되는 순서대로 저장된다.
 ## 🦅 4.4 MYSQL 로그 파일
 * **에러 로그 파일**
+  * 에러 로그 파일은 MySQL이 실행되는 도중에 발생하는 에러나 경고 메시지가 출력되는 로그 파일이다.
 * **제너럴 쿼리 로그 파일(제너럴 로그 파일, General log)**
+  * 제너럴 쿼리 로그는 실행되기 전에 MySQL이 쿼리 요청을 받으면 바로 기록하기 때문에 쿼리 실행 중에 에러가 발생해도 일단 로그 파일에 기록한다.
 * **슬로우 쿼리 로그**
-
+  * 서비스 운영중에 MySQL 서버의 전체적인 성능 저하를 검사하거나 정기적인 튜닝을 할 때 슬로우 쿼리 로그가 많은 도움이 된다.
+  * 슬로우 쿼리 로그 파일에는 `long_query_time` 시스템 변수에 설정한 시간 이상의 시간이 소요된 쿼리가 모두 기록된다.(단, 정상적으로 실행완료한 쿼리에 한함)
