--- a/Real MySQL(1)/08_인덱스.md
+++ b/Real MySQL(1)/08_인덱스.md
@@ -46,9 +46,18 @@
     * B-Tree 인덱스를 이용한 검색은 100% 일치 또는 값의 앞부분만 일치하는 경우에 사용할 수 있다.(부등호 비교 조건에도 활용가능하지만, 인덱스를 구성하는 키 값의 뒷부분만 검색하는 용도로는 인덱스를 사용할 수 없다.)
 * **B-Tree 인덱스 사용에 영향을 미치는 요소**
   * 인덱스 키 값의 크기
+    * 인덱스는 페이지 단위로 관리되며 루트, 브랜치, 리프 노드를 구분한 기준도 페이지 단위이다.
+    * 일반적으로 DBMS의 B-Tree는 자식 노드의 개수가 가변적인 구조다. MySQL의 B-Tree의 자식노드의 개수는 인덱스의 페이지 크기와 키 값의 크기에 따라 결정된다.
+    * 인덱스를 구성하는 키 값의 키가 커지면 디스크로부터 읽어야 하는 횟수가 늘어나고, 그만큼 느려진다 것을 의미한다.
   * B-Tree 깊이
+    * B-Tree의 깊이는 **MySQL에서 값을 검색할 때 몇 번이나 랜덤하게 디스크를 읽어야 하는지**와 직결되는 문제다.
+    * 결론적으로 인덱스 키 값의 크기가 커지면 커질수록 하나의 인덱스 페이지가 담을 수 있는 인덱스 키 값의 개수가 적어지고, 그 때문에 같은 레코드 건수라 하더라도 B-Tree의 깊이가 깊어져서 디스크 읽기가 더 많이 필요하게 된다는 것을 의미한다.
   * 선택도(기수성)
+    * `선택도(기수성)`: 모든 인덱스 키 값 가운데 유니크한 값의 수를 의미한다.
+    * 인덱스는 선택도가 높을수록(=유니크한 값의 수가 많을수록) 검색 대상이 줄어들기 때문에 그만큼 빠르게 처리된다.
   * 읽어야 하는 레코드의 건수
+    * 일반적인 DBMS의 옵티마이저에서는 인덱스를 통해 레코드 1건을 읽는 것이 테이블에서 직접 레코드 1건을 읽는 것보다 `4~5배`정도 비용이 더 많이 드는 작업인 것으로 예측한다.
+    * 즉, 인덱스를 통해 읽어야 할 레코드의 건수(=옵티마이저가 판단한 예상 건수)가 전체 테이블 레코드의 20~25%를 넘어서면 인덱스를 이용하지 않고 테이블을 모두 직접 읽어 필요한 레코드만 가려내는(필터링) 방식으로 처리하는 것이 효율적이다.
 * **B-Tree 인덱스를 통한 데이터 읽기**
   * 인덱스 레인지 스캔
   * 인덱스 풀 스캔
