--- a/Real MySQL(1)/08_인덱스.md
+++ b/Real MySQL(1)/08_인덱스.md
@@ -59,10 +59,24 @@
     * 일반적인 DBMS의 옵티마이저에서는 인덱스를 통해 레코드 1건을 읽는 것이 테이블에서 직접 레코드 1건을 읽는 것보다 `4~5배`정도 비용이 더 많이 드는 작업인 것으로 예측한다.
     * 즉, 인덱스를 통해 읽어야 할 레코드의 건수(=옵티마이저가 판단한 예상 건수)가 전체 테이블 레코드의 20~25%를 넘어서면 인덱스를 이용하지 않고 테이블을 모두 직접 읽어 필요한 레코드만 가려내는(필터링) 방식으로 처리하는 것이 효율적이다.
 * **B-Tree 인덱스를 통한 데이터 읽기**
-  * 인덱스 레인지 스캔
-  * 인덱스 풀 스캔
-  * 루스 인덱스 스캔
-  * 인덱스 스킵 스캔
+  * **인덱스 레인지 스캔**
+    * `인덱스 레인지 스캔`은 검색해야 할 인덱스의 범위가 결정됐을 때 사용하는 방식이다.
+    * 실제 인덱스만을 읽는 경우와 B-Tree 인덱스의 리프 노드를 스캔하면서 실제 데이터 파일의 레코드를 읽어 와야하는 경우가 있다.
+    * 어떤 방식으로 스캔하든 관계없이, 해당 인덱스를 구성하는 컬럼의 정순 또는 역순으로 정렬된 상태로 레코드를 가져온다(인덱스 자체의 정렬 특성 때문에 자동으로 그렇게 된다.)
+    * 인덱스의 리프 노드에서 검색 조건에 일치하는 건들은 데이터 파일에서 레코드를 읽어오는 과정이 필요하다.
+    * 인덱스 레인지 스캔은 인덱스 탐색, 인덱스 스캔, 최종 레코드를 읽어오는 3가지 과정으로 이루어진다(커버링 인덱스의 경우 최종 레코드를 읽어오는 과정은 필요하지 않을 수 있다.)
+  * **인덱스 풀 스캔**
+    * `인덱스 풀 스캔`은 인덱스를 사용하지만 인덱스 레인지 스캔과는 달리 인덱스의 처음부터 끝까지 모두 읽는 방식이다.
+    * 쿼리가 인덱스에 명시된 컬럼만으로 조건을 처리할 수 있는 경우 주로 이 방식이 사용된다. 인덱스 뿐만 아니라 데이터 레코드까지 모두 읽어야 한다면 절대 이 방식으로 처리되지 않는다.
+    * 이 방식은 인덱스 레인지 스캔보다는 빠르지 않지만 테이블 풀 스캔보다는 효율적이다.
+  * **루스 인덱스 스캔**
+    *`루스 인덱스 스캔`은 인덱스 레인지 스캔과 비슷하게 작동하지만 중간에 필요치 않은 인덱스 키 값은 무시(SKIP)하고 다음으로 넘어가는 형태로 처리하는 방식이다.
+    * 일반적으로 GROUP BY 또는 집합 함수 가운에 MAX() 또는 MIN() 함수에 대해 최적화를 하는 경우에 사용된다.
+  * **인덱스 스킵 스캔**
+    * `인덱스 스킵 스캔`은 루트 또는 브랜치 블록에서 읽은 컬럼 값 정보를 이용해 조건절에 부합하는 레코드를 포함할 가능성이 있는 리프블록만 골라서 액세스하는 스캔 방식이다.
+    * 인덱스 스킵 스캔의 단점
+      * WHERE 조건절에 조건이 없는 인덱스의 선행 컬럼의 유니크한 값의 개수가 적어야 한다.(쿼리의 처리 성능이 오히려 더 느려질 수 있기 때문에)
+      * 쿼리가 인덱스에 존재하는 컬럼만으로 처리가 가능해야 한다(커버링 인덱스)
 * **다중 칼럼(Multi-column) 인덱스**
 * **B-Tree 인덱스의 정렬 및 스캔 방향**
   * 인덱스의 정렬
