--- a/Real MySQL(1)/08_인덱스.md
+++ b/Real MySQL(1)/08_인덱스.md
@@ -78,14 +78,49 @@
       * WHERE 조건절에 조건이 없는 인덱스의 선행 컬럼의 유니크한 값의 개수가 적어야 한다.(쿼리의 처리 성능이 오히려 더 느려질 수 있기 때문에)
       * 쿼리가 인덱스에 존재하는 컬럼만으로 처리가 가능해야 한다(커버링 인덱스)
 * **다중 칼럼(Multi-column) 인덱스**
+  * `다중 컬럼 인덱스`: 두 개 이상의 컬럼으로 구성된 인덱스
+  * 인덱스의 두 번째 컬럼은 첫 번째 컬럼에 의존해서 정렬돼 있다(만약 컬럼이 4개인 인덱스를 생성한다면 세번 째 컬럼은 두 번째 컬럼에 의존해서 정렬된다.)
 * **B-Tree 인덱스의 정렬 및 스캔 방향**
-  * 인덱스의 정렬
+  * 인덱스의 정렬   
+    MySQL 5.7 버전까지는 컬럼 단위로 정렬 순서를 혼합(ASC와 DESC)해서 인덱스를 생성할 수 없었다. 하지만 MySQL 8.0 버전부터는 혼합 인덱스를 생성할 수 있게 됐다.
     * 인덱스 스캔 방향
+      * ```
+        mysql> SELECT *
+               FROM employees
+               ORDER BY first_name DESC
+               LIMIT 1;
+        ```
+        **이 쿼리를 실행하기 위해서는 인덱스를 처음부터 오름차순으로 끝까지 읽어 first_name이 가장 큰(오름차순으로 읽었을 때 가장 마지막 레코드) 값 하나를 가져오는 것일까?** ➡️ 아니다. 옵티마이저는 인덱스를 최댓값부터 거꾸로 읽으면 내림차순으로 값을 가져올 수 있음을 알기 때문이다.
     * 내림차순 인덱스
-* **B-Tree 인덱스의 가용성과 효율성**
+      * ✏️`오름차순 인덱스`: 작은 값의 인덱스 키가 B-Tree의 왼쪽으로 정렬된 인덱스
+      * ✏️`내림차순 인덱스`: 큰 값의 인덱스 키가 B-Tree의 왼쪽으로 정렬된 인덱스
+      * ✏️`인덱스 정순 스캔`: 인덱스 키의 크고 작음에 관계없이 인덱스 리프 노드의 왼쪽 페이지부터 오른쪽으로 스캔
+      * ✏️`인덱스 역순 스캔`: 인덱스 키의 크고 작음에 관계없이 인덱스 리프 노드의 오른쪽 페이지부터 왼쪽으로 스캔
+      * 내림차순과 오름차순의 내부적인 차이로 인한 성능: MySQL InnoDB 스토리지 엔진에서 인덱스 역순 스캔이 인덱스 정순 스캔에 비해 느리다(이유: 페이지 잠금이 인덱스 정순 스캔에 적합한 구조, 페이지 내에서 인덱스 레코드가 단방향으로만 연결된 구조)
+* **B-Tree 인덱스의 가용성과 효율성**   
+  쿼리의 WHERE 조건이나 GROUP BY 또는 ORDER BY 절이 어떤 경우에 인덱스를 사용할 수 있고 어떤 방식으로 사용할 수 있는지 식별할 수 있어야 한다. 그래야만 쿼리의 조건을 최적화하거나, 역으로 쿼리에 맞게 인덱스를 최적으로 생성할 수 있기 때문이다.
   * 비교 조건의 종류와 효율성
+    * 다중 컬럼 인덱스에서 각 컬럼의 순서와 크 컬럼에 사용된 조건이 동등 비교("=")인지 아니면 크다(">") 또는 작다("<") 같은 범위 조건인지에 따라 각 인덱스 컬럼의 활용 형태가 달라지며, 그 효율 또한 달라진다.
   * 인덱스의 가용성
   * 가용성과 효율성 판단
+    * **B-Tree 인덱스 특성상 `작업 범위 결정 조건`으로 사용할 수 없는 조건**
+      1. NOT-EQUAL로 비교된 경우
+      2. LIKE '%??'(앞부분이 아닌 뒷부분 일치) 형태로 문자열 패턴이 비교된 경우
+      3. 스토어드 함수나 다른 연산자로 인덱스 컬럼이 변향된 후 비교된 경우
+      4. NOT-DETERMINISTIC 속성의 스토어드 함수가 비교 조건에 사용된 경우
+      5. 데이터 타입이 서로 다른 비교(인덱스 컬럼의 타입을 변환해야 비교가 가능한 경우)
+      6. 문자열 데이터 타입의 콜레이션이 다른 경우
+    * **다중 컬럼으로 만들어진 인덱스 중 사용가능/불가능 경우**   
+      `INDEX ix_test (column_1, column_2, column_3, .., column_n)`
+      * 작업 범위 결정 조건으로 인덱스를 사용하지 못하는 경우
+        1. column_1 컬럼에 대한 조건이 없는 경우
+        2. column_1 컬럼의 비교 조건이 위의 인덱스 사용 불가 조건 중 하나인 경우
+      * 작업 범위 결정 조건으로 인덱스를 사용하는 경우
+        1. column_1 ~ column_(i-1) 컬럼까지 동등 비교 형태("=" 또는 "IN")로 비교
+        2. column_i 컬럼에 대해 다음 연산자 중 하나로 비교
+           * 동등 비교("=" 또는 "IN")
+           * 크다 작다 형태(">" 또는 "<")
+           * LIKE로 좌측 일치 패턴(LIKE '승환%')
 ## 🦅 8.4 R-Tree 인덱스
 
 ## 🦅 8.5 전문 검색(Full Text search) 인덱스
