--- a/Real MySQL(1)/08_인덱스.md
+++ b/Real MySQL(1)/08_인덱스.md
@@ -7,6 +7,7 @@
     * 두 I/O의 차이점은 디스크의 기록해야 할 위치를 찾기 위해 디스크 헤드를 몇 번 움직였냐는 것이다.
   * **디스크의 성능은 디스크의 헤더의 위치 이동 없이 얼마나 많은 데이터를 한 번에 기록하느냐**에 의해 결정된다. 그래서 여러 번 쓰기 또는 읽기를 요청하는 `랜덤 I/O` 작업이 작업 부하가 훨씬 더 크다.
   * 데이터베이스 대부분의 작업은 이러한 작은 데이터를 빈번히 읽고 쓰기 때문에 MySQL 서버에는 그룹 커밋이나 바이너리 로그 버퍼 또는 InnoDB 로그 버퍼 등의 기능이 내장돼 있다.
+
 ## 🦅 8.2 인덱스란?
 * `SortedList`는 DBMS의 인덱스와 같은 자료구조로, 저장되는 값을 항상 정렬된 상태로 유지한다.
   * 장점: 이미 정렬되어 있기 때문에 아주 빨리 원하는 값을 찾아올 수 있다.
@@ -19,6 +20,7 @@
 * **인덱스를 데이터 저장 방식(알고리즘)별로 구분할 경우**
   * `B-Tree 인덱스`: 칼럼의 값을 변형하지 않고 원래의 값을 이용해 인덱싱하는 알고리즘
   * `Hash 인덱스`: 칼럼의 값으로 해시 값을 계산해 인덱싱하는 알고리즘, 매우 빠른 검색을 지원. 주로 메모리 기반의 데이터베이스에서 많이 사용한다.
+
 ## 🦅 8.3 B-Tree 인덱스
 * **구조 및 특성**
   ![image](https://github.com/user-attachments/assets/785a8691-1ea7-4743-b5d7-21af79b21759)
@@ -121,16 +123,92 @@
            * 동등 비교("=" 또는 "IN")
            * 크다 작다 형태(">" 또는 "<")
            * LIKE로 좌측 일치 패턴(LIKE '승환%')
+
 ## 🦅 8.4 R-Tree 인덱스
+✏️`공간 인덱스`: R-Tree 인덱스 알고리즘을 이용해 2차원의 데이터를 인덱싱하고 검색하는 목적의 인덱스   
+* MySQL 공간 확장의 기능
+  * 공간 데이터를 저장할 수 있는 데이터 타입
+  * 공간 데이터의 검색을 위한 공간 인덱스(R-Tree 알고리즘)
+  * 공간 데이터의 연산 함수(거리 또는 포함 관계의 처리)
+* **구조 및 특성**   
+  ![image](https://github.com/user-attachments/assets/f071c650-6858-46b0-9c6c-a806d79e4bb0)
+  * ✏️`MBR(Minimum Bounding Rectangle, 최소 경계 상자)`: 도형을 감싸는 최소 크기의 사각형. 위 이미지의 사각형들의 포함 관계를 B-Tree 형태로 구현한 인덱스가 R-Tree인덱스이다.
+* **R-Tree 인덱스의 용도**
+  * 일반적으로 **위도, 경도 좌표** 저장에 사용된다..
+  * '현재 사용자의 위치로부터 반경 5km 이내의 음식점 검색' 등과 같은 검색에 사용할 수 있다.
+  * 공간 인덱스를 사용할 수 있는 `ST_Contains()`나 `ST_Within()`을 이용해 거리 기반 검색을 해야한다.
 
 ## 🦅 8.5 전문 검색(Full Text search) 인덱스
+* **인덱스 알고리즘**
+  * 어근 분석 알고리즘
+    * MySQL 서버의 전문 검색 인덱스는 `불용어(Stop Word) 처리`, `어근 분석(Stemming)` 과정을 거쳐 색인 작업이 수행된다.
+    * ✏️`불용어 처리`: 검색에서 별 가치가 없는 단어를 모두 필터링해서 제거하는 작업
+    * ✏️`어근 분석`: 검색어로 선정된 단어의 뿌리인 원형을 찾는 작업
+  * n-gram 알고리즘
+    * `n-gram`이란 본문을 무조건 몇 글자씩 잘라서 인덱싱하는 방법이다.
+    * 형태소 분석보다는 알고리즘이 단순하고 국가별 언어에 대한 이해와 준비 작업이 필요 없는 반면, 만들어진 인덱스의 크기는 상당히 큰 편이다.
+    * n은 인덱싱할 최소 글자 수를 의미한다.
+  * 불용어 변경 및 삭제
+    * 전문 검색 인덱스의 불용어 처리 무시
+      * **첫 번째**는 스토리지 엔진에 관계없이 MySQL 서버의 모든 전문 검색 인덱스에 대해 불용어를 완전히 제거하는 것이다.(`ft_stopword_file`시스템 변수에 빈 문자열 설정)
+      * **두 번째**는 InnoDB 스토리지 엔진을 사용하는 테이블의 전문 검색 인덱스에 대해서만 불용어 처리를 무시할 수도 있다.(`innodb_ft_enable_stopword` 시스템 변수 OFF)
+    * 사용자 정의 불용어 사용
+      * **첫 번째 방법**은 불용어 목록을 파일로 저장하고, MySQL 서버 설정 파일에서 파일의 경로를 등록하는 것이다.(`ft_stop_file='/data/my_custom_stopword.txt'`)
+      * **두 번째 방법**은 InnoDB 스토리지 엔진을 사용하는 테이블의 전문 검색 엔진에서만 사용할 수 있으며, 불용어의 목록을 테이블로 저장하는 방식이다.
+* **전문 검색 인덱스의 가용성**   
+  전문 검색 인덱스를 사용하려면 반드시 두 가지 조건을 갖춰야 한다.   
+  * 쿼리 문장이 전문 검색을 위한 문법(MATCH ... AGAINST ...)을 사용
+  * 테이블이 전문 검색 대상 칼럼에 대해서 전문 인덱스 보유
 
-## 🦅 8.6 함수 기반 인덱스
+## 🦅 8.6 함수 기반 인덱스   
+MySQL 서버의 함수 기반 인덱스를 **인덱싱할 값을 계산하는 과정의 차이만 있을 뿐**, 실제 인덱스의 내부적인 구조 및 유지관리 방법은 B-Tree의 인덱스와 동일하다.
+* **가상 칼럼을 이용한 인덱스**
+  * 가상 컬럼은 테이블에 새로운 컬럼을 추가하는 것과 같은 효과를 내기 때문에 실제 테이블의 구조가 변경된다는 단점이 있다.
+* **함수를 이용한 인덱스**
+  * 함수를 직접 사용하는 인덱스는 테이블의 구조는 변경하지 않고, 계산된 결괏값의 검색을 빠르게 만들어준다.
+  * **함수 기반 인덱스를 활용하려면 반드시 조건절에 함수 기반 인덱스에 명시된 표현식이 그대로 사용돼야 한다.** 함수 생성 시 명시된 표현식과 쿼리의 WHERE 조건절에 사용된 표현식이 다르다면 MySQL 옵티마이저는 다른 표현식으로 간주해서 함수 기반 인덱스를 사용하지 못한다.
 
 ## 🦅 8.7 멀티 밸류(Multi-Value) 인덱스
+멀티 밸류 인덱스는 하나의 데이터 레코드가 여러 개의 키 값을 가질 수 있는 형태의 인덱스다.   
+멀티 밸류 인덱스를 활용하기 위해서는 일반적인 조건 방식을 사용하면 안되고, `MEMBER OF()`, `JSON_CONTAINS()`, `JSON_OVERLAPS()` 함수들을 이용해서 검색해야 옵티마이저가 인덱스를 활용한 실행 계획을 수립한다.   
 
-## 🦅 8.8 클러스터링 인덱스
+## 🦅 8.8 클러스터링 인덱스   
+MySQL 서버에서 클러스터링은 테이블의 레코드를 비슷한 것(프라이머리 키를 기준으로)들끼리 묶어서 저장하는 형태로 구현되는데, 이는 주로 `비슷한 값들을 동시에 조회하는 경우가 많다는 점에 착안`한 것이다.
+* **클러스터링 인덱스**
+  * 클러스터링 인덱스는 테이블의 프라이머리 키에 대해서만 적용되는 내용으로 프라이머리 키 값이 비슷한 레코드끼리 묶어서 저장한다.
+  * 프라이머리 키 값에 의해 레코드의 저장 위치가 결정되므로, 프라이머리 키 값이 변경된다면 그 레코드의 물리적인 저장 위치가 바뀌어야 한다.
+  * 🤔 그럼 프라이머리 키가 없는 InnoDB 테이블은 어떻게 클러스터링 테이블로 수정될까? -> 우선순위가 존재한다.
+    1. 프라이머리 키가 있으면 기본적으로 프라이머리 키를 클러스터링 키로 선택
+    2. NOT NULL 옵션의 유니크 인덱스 중에서 첫 번쨰 인덱스를 클러스터링 키로 선택
+    3. 자동으로 유니크한 값을 가지도록 증가되는 컬럼을 내부적으로 추가한 후, 클러스터링 키로 선택
+* **세컨더리 인덱스에 미치는 영향**
+  * 🤔 InnoDB 테이블에서 세컨더리 인덱스가 실제 레코드가 저장된 주소를 가지고 있다면 어떻게 될까? 클러스터링 키 값이 변경될 때마다 데이터 레코드의 주소가 변경되고 그때마다 해당 테이블의 모든 인덱스에 저장된 주솟값을 변경해야 할 것이다.
+  * **이런 오버헤드를 제거하기 위해 InnoDB 테이블의 모든 세컨더리 인덱스는 레코드가 저장된 주소가 아니라 프라이머리 키 값을 저장하도록 구현되어 있다.**
+* **클러스터링 인덱스의 장점과 단점**
+  * 장점
+    * 프라이머리 키로 검색할 때 처리 성능이 매우 빠르다.
+    * 테이블의 모든 세컨더리 인덱스가 프라이머리 키를 가지고 있기 때문에 인덱스만으로 처리될 수 있는 경우가 많다.
+  * 단점
+    * 테이블의 모든 세컨더리 인덱스가 클러스터링 키를 갖기 때문에 클러스터링 키 값의 크기가 클 경우 전체적으로 인덱스의 크기가 처진다.
+    * 세컨더리 인덱스를 통해 검색할 때 프라이머리 키로 다시 한번 검색해야 하므로 처리 성능이 느리다.
+* **클러스터링 테이블 사용 시 주의사항**
+  * 클러스처링 인덱스 키의 크기
+  * 프라이머리 키는 AUTO-INCREMENT보다는 업무적인 칼럼으로 생성(가능한 경우)
+  * 프라이머리 키는 반드시 명시할 것
+  * AUTO-INCREMENT 칼럼을 인조 식별자로 사용할 경우
 
 ## 🦅 8.9 유니크 인덱스
-
-## 🦅 8.10 외래키
+* **유니크 인덱스와 일반 세컨더리 인덱스의 비교**
+  * 인덱스 읽기
+    * 유니크 인덱스가 빠르다고 생각할 수 있지만, 사실이 아니다.
+    * 유니크하지 않은 세컨더리 인덱스에서 한 번 더 해야 하는 작업은 디스크 읽기가 아니라 CPU에서 컬럼 값을 비교하는 작업이기 때문에 이는 성능상 영향이 거의 없다.
+  * 인덱스 쓰기
+    * 유니크 인덱스의 키 값을 쓸 때는 중복된 값이 있는지 없는지 체크하는 과정이 한 단계 더 필요하기 때문에 유니크하지 않은 세컨더리 인덱스의 쓰기보다 느리다.
+* **유니크 인덱스 사용 시 주의사항**
+  * 성능이 더 좋아질 것으로 생각하고 불필요하게 유니크 인덱스를 생성하지는 않는 것이 좋다.
+  * 똑같은 컬럼에 대해 프라이머리 키와 유니크 인덱스를 동일하게 생성한 경우는 불필요한 중복이므로 주의하자.
+ 
+## 🦅 8.10 외래키   
+InnoDB의 외래키 관리에는 중요한 두 가지 특징이 있다.
+1. **테이블의 변경(쓰기 잠금)이 발생하는 경우에만 잠금 경합(잠금 대기)이 발생한다.**
+2. **외래키와 연관되지 않은 컬럼의 변경은 최대한 잠금 경합(잠금 대기)을 발생시키지 않는다.**
