--- a/Real MySQL(1)/09_옵티마이저와 힌트.md
+++ b/Real MySQL(1)/09_옵티마이저와 힌트.md
@@ -24,13 +24,22 @@
     * ✏️`소트 버퍼`: MySQL에서 정렬을 수행하기 위해 사용하는 별도의 메모리 공간, 이 메모리 공간은 쿼리의 실행이 완료되면 즉시 시스템으로 반납된다.
   * 정렬 알고리즘
     * 싱글 패스 정렬 방식
+      * **소트 버퍼에 정렬 기준 컬럼을 포함해 SELECT 대상이 되는 컬럼 전부를 담아서 정렬을 수행하는 정렬 방식이다.**
+      *  투 패스 정렬 방식보다 더 많은 소트 버퍼 공간이 필요하다.
     * 투 패스 정렬 방식
+      * **정렬 대상 컬럼과 프라이머리 키 값만 소트 버퍼에 담아서 정렬을 수행하고, 정렬된 순서대로 다시 프라이머리 키로 테이블을 읽어서 SELECT할 컬럼을 가져오는 정렬 방식으로, 싱글 패스 정렬 방식이 도입되기 이전부터 사용하던 방식이다.**
+      * 싱글 패스 방식은 정렬 대상 레코드의 크기나 건수가 작은 경우 빠른 성능을 보이며, 투 패스 방식은 정렬 대상 레코드의 크기나 건수가 상당히 많은 경우 효율적이라고 볼 수 있다.
   * 정렬 처리 방법
     * 인덱스를 이용한 정렬
+      * 해당 정렬을 위해서는 반드시 ORDER BY에 명시된 컬럼이 제일 먼저 읽는 테이블에 속하고, ORDER BY의 순서대로 생성된 인덱스가 있어야 한다.
+      * B-Tree 계열의 인덱스가 아닌 해시 인덱스나 전문 검색 인덱스 등에서는 인덱스를 이용한 정렬을 사용할 수 없다.
     * 조인의 드라이빙 테이블만 정렬
+      * 해당 방법으로 정렬이 처리되려면 조인에서 첫 번째로 읽히는 테이블(드라이빙 테이블)의 컬럼만으로 ORDER BY 절을 작성해야 한다.
     * 임시 테이블을 이용한 정렬
+      * ORDER BY 절의 정렬 기준 컬럼이 드라이빙 테이블이 아니라 드리븐 테이블에 있는 컬럼인 경우 사용한다.
     * 정렬 처리 방법의 성능 비교
       * 스트리밍 방식
+        * 서버 쪽에서 처리할 데이터가 얼마인지에 관계없이 조건에 일치하는 레코드가 검색될때마다 바로바로 클라이언트로 전송해주는 방식을 의미한다.
       * 버퍼링 방식
   * 정렬 관련 상태 변수
 * **GROUP BY 처리**
