--- a/Real MySQL(1)/09_옵티마이저와 힌트.md
+++ b/Real MySQL(1)/09_옵티마이저와 힌트.md
@@ -32,20 +32,38 @@
   * 정렬 처리 방법
     * 인덱스를 이용한 정렬
       * 해당 정렬을 위해서는 반드시 ORDER BY에 명시된 컬럼이 제일 먼저 읽는 테이블에 속하고, ORDER BY의 순서대로 생성된 인덱스가 있어야 한다.
+      * ✏️ **정렬이 되어있다고 ORDER BY 절 자체를 쿼리해서 제거하면 안된다.** MySQL 서버는 정렬을 인덱스로 처리할 수 있는 경우 부가적으로 불필요한 정렬 작업을 수행하지 않기 때문이다.
       * B-Tree 계열의 인덱스가 아닌 해시 인덱스나 전문 검색 인덱스 등에서는 인덱스를 이용한 정렬을 사용할 수 없다.
     * 조인의 드라이빙 테이블만 정렬
       * 해당 방법으로 정렬이 처리되려면 조인에서 첫 번째로 읽히는 테이블(드라이빙 테이블)의 컬럼만으로 ORDER BY 절을 작성해야 한다.
     * 임시 테이블을 이용한 정렬
       * ORDER BY 절의 정렬 기준 컬럼이 드라이빙 테이블이 아니라 드리븐 테이블에 있는 컬럼인 경우 사용한다.
+      * 정렬의 3가지 방법 가운데 정렬해야 할 레코드 건수가 가장 많기 때문에 가장 느린 정렬 방법이다.
     * 정렬 처리 방법의 성능 비교
-      * 스트리밍 방식
+      쿼리에서 인덱스를 사용하지 못하는 정렬이나 그루핑 작업이 왜 느리게 작동할 수 밖에 없는지 확인해보자. 쿼리가 처리되는 방법은 `스트리밍 처리`와 `버퍼링 처리`라는 2가지 방식으로 구분할 수 있다.
+      * 스트리밍 방식   
+        <img src="https://github.com/user-attachments/assets/8c534d42-92ee-4cee-a258-37cc83f6f57c" width="400"/></br>
         * 서버 쪽에서 처리할 데이터가 얼마인지에 관계없이 조건에 일치하는 레코드가 검색될때마다 바로바로 클라이언트로 전송해주는 방식을 의미한다.
-      * 버퍼링 방식
+      * 버퍼링 방식   
+        <img src="https://github.com/user-attachments/assets/edbc83ba-9041-4add-9ab7-bcc98cfed652" width="400"/></br>
+        * 스트리밍 방식의 반대 방식이다.
+        * ORDER BY나 GROUP BY 같은 처리는 쿼리의 결과가 스트리밍 되는 것을 불가능하게 한다. 우선 WHERE 조건에 일치하는 모든 레코드를 가져온 후, 정렬하거나 그루핑해서 차례대로 보내야 하기 때문이다. 이 경우 버퍼링 방식이 사용된다.
+        * 인덱스를 사용한 정렬방식만 스트리밍 형태의 처리이고, 나머지는 모두 버퍼링된 후에 정렬된다.
   * 정렬 관련 상태 변수
-* **GROUP BY 처리**
+    * MySQL 서버는 처리하는 주요 작업에 대해서는 해당 작업의 실행 횟수를 상태 변수로 저장한다.
+    * `Sort_merge_passes`: 멀티 머지 횟수, `Sort_range`: 인덱스 레인지 스캔을 통해 검색된 결과에 대한 정렬 작업 횟수, `Sort_scan`: 풀 테이블 스캔을 통해 검색된 결과에 대한 정렬 작업 횟수, `Sort_scan`, `Sort_range`: 정렬 작업 횟수를 누적하고 있는 상태 값, `Sort_rows`: 지금까지 정렬한 전체 레코드 건수
+* **GROUP BY 처리**   
+  GROUP BY 작업도 인덱스를 사용하는 경우와 그렇지 못한 경우로 나눠 볼 수 있다.
   * 인덱스 스캔을 이용하는 GROUP BY(타이트 인덱스 스캔)
+    * ORDER BY의 경우와 마찬가지로 조인의 드라이빙 테이블에 속한 컬럼만 이용해 그루핑할 때 GROUP BY 컬럼으로 이미 인덱스가 있다면 그 인덱스를 차례대로 읽으면서 그루핑 작업을 수행하고 그 결과로 조인을 처리한다.
+    * 이러한 그루핑 방식을 사용하는 쿼리의 실행 계획에서는 Extra 컬럼에 별도로 GROUP BY 관련 코멘트("Using index for group-by")나 임시 테이블 사용 또는 정렬 관련 코멘트("Using temporary, Using filesort")가 표시되지 않는다.
   * 루스 인덱스 스캔을 이용하는 GROUP BY
+    * ✏️ `루스 인덱스 스캔`: 인덱스의 레코드를 건너뛰면서 필요한 부분만 읽어서 가져오는 것
+    * MySQL의 루스 인덱스 스캔 방식은 단일 테이블에 대해 수행되는 GROUP BY 처리에만 사용할 수 있으며, 프리픽스 인덱스는 루스 인덱스 스캔을 사용할 수 없다.
+    * 루스 인덱스 스캔에서는 인덱스의 유니크한 값의 수가 적을수록 성능이 향상된다. 즉, 루스 인덱스 스캔은 분포도가 좋지 않은 인덱스일수록 더 빠른 결과를 만들어낸다.
+    * 루스 인덱스 스캔으로 처리되는 쿼리에서는 별도의 임시 테이블이 필요하지 않다.
   * 임시 테이블을 사용하는 GROUP BY
+    * MySQL 8.0에서는 GROUP BY가 필요한 경우 내부적으로 GROUP BY 절의 컬럼들로 구성된 유니크 인덱스를 가진 임시 테이블을 만들어서 중복 제거와 집합 함수 연산을 수행한다. 즉 별도의 정렬 작업 없이 GROUP BY가 처리된다.
 * **DISINCT 처리**
   * SELECT DISTINCT
   * 집합 함수와 함께 사용된 DISTINCT
