09_옵티마이저와 힌트

--- a/Real MySQL(1)/09_옵티마이저와 힌트.md
+++ b/Real MySQL(1)/09_옵티마이저와 힌트.md
@@ -66,12 +66,27 @@
     * MySQL 8.0에서는 GROUP BY가 필요한 경우 내부적으로 GROUP BY 절의 컬럼들로 구성된 유니크 인덱스를 가진 임시 테이블을 만들어서 중복 제거와 집합 함수 연산을 수행한다. 즉 별도의 정렬 작업 없이 GROUP BY가 처리된다.
 * **DISINCT 처리**
   * SELECT DISTINCT
+    * 단순히 SELECT되는 레코드 중에서 `유니크한 레코드`만 가져오고자 하면 SELECT DISTINCT 형태의 쿼리 문장을 사용한다. 이 경우 GROUP BY와 동일한 방식으로 처리된다.
+    * 유의해야할 점은 DISTINCT는 SELECT하는 레코드(튜플)를 유니크하게 SELECT하는 것이지, 특정 컬럼만 유니크하게 조회하는 것이 아니다.
+    * `SELECT DISTINCT(first_name), last_name FROM employees` 해당 쿼리는 first_name만 유니크하게 조회하고 last_name은 DISTINCT가 없을 때와 동일하게 조회하는 쿼리처럼 보이지만, MYSQL는 괄호를 의미없이 사용된 괄호로 해석하고 제거해버린다.(**= SELECT 절에 사용된 DISTINCT 키워드는 조회되는 모든 컬럼에 영향을 미친다.**)
   * 집합 함수와 함께 사용된 DISTINCT
+    * 집합 함수가 없는 SELECT 쿼리에서 DISTINCT는 조회하는 모든 컬럼의 조합이 유니크한 것들만 가져온다. 하지만 집합 함수 내에서 사용된 DISTINCT는 그 집합 함수의 인자로 전달된 컬럼값이 유니크한 것들을 가져온다.
 * **내부 임시 테이블 활용**
   * 메모리 임시 테이블과 디스크 임시 테이블
+    * MySQL 8.0 버전부터 메모리용 임시 테이블을 MEMORY와 TempTable 중에서 선택이 가능하다. 기본 값은 TempTable이다.
+    * 임시 테이블의 크기가 1GB보다 커지는 경우 메모리의 임시 테이블을 디스크로 기록한다.(MMAP 파일로 디스크에 기록 또는 InnoDB 테이블로 기록)
   * 임시 테이블이 필요한 쿼리
+    * ORDER BY와 GROUP BY에 명시된 컬럼이 다른 쿼리
+    * ORDER BY나 GROUP BY에 명시된 컬럼이 조인의 순서상 첫 번째 테이블이 아닌 쿼리
+    * DISTINCT와 ORDER BY가 동시에 쿼리에 존재하는 경우 또는 DISTINCT가 인덱스로 처리되지 못하는 쿼리
+    * UNION이나 UNION DISTINCT가 사용된 쿼리
+    * 쿼리의 실행 계획에서 select_type이 DERIVED인 쿼리
   * 임시 테이블이 디스크에 생성되는 경우
+    * UNION이나 UNION ALL에서 SELECT되는 컬럼 중에서 길이가 512바이트 이상인 크기의 컬럼이 있는 굥우
+    * GROUP BY나 DISTINCT 컬럼에서 512바이트 이상인 크기의 컬럼이 있는 경우
   * 임시 테이블 관련 상태 변수
+    * Created_tmp_tables: 쿼리의 처리를 위해 만들어진 내부 임시 테이블의 개수를 누적하는 상태 값
+    * Created_tmp_disk_tables: 디스크에 내부 임시 테이블이 만들어진 개수만 누적해서 갖고 있는 상태 값
 
 ## 🦅 9.3 고급 최적화
 
