--- a/Real MySQL(1)/09_옵티마이저와 힌트.md
+++ b/Real MySQL(1)/09_옵티마이저와 힌트.md
@@ -89,5 +89,49 @@
     * Created_tmp_disk_tables: 디스크에 내부 임시 테이블이 만들어진 개수만 누적해서 갖고 있는 상태 값
 
 ## 🦅 9.3 고급 최적화
+### 옵티마이저 스위치 옵션
+MySQL 서버의 옵티마이저가 실행 계획을 수립할 때 통계 정보와 옵티마이저 옵션을 결합해서 최적의 실행 계획을 수립하게 된다.   
+옵티마이저 옵션은 크게 조인 관련 옵티마이저 옵션과 옵티마이저 스위치로 구분할 수 있다.
+옵티마이저 스위치 옵션은 `optimizer_switch` 시스템 변수를 이용해서 제어하는데, 여러 개의 옵션을 세트로 묶어서 설정하는 방식으로 사용한다.
+* **MRR과 배치 키 액세스(mrr & batched_key_access)**
+  * MRR은 "Multi-Range Read"로 드라이빙 테이블의 레코드를 읽어서 드리븐 테이블과의 조인을 즉시 실행하지 않고 조인 대상을 버퍼링 하는 것이다.
+  * 조인 버퍼에 레코드가 가득 차면 비로소 MySQL 엔진은 버퍼링된 레코드를 스토리지 엔진으로 한 번에 요청한다.
+  * 이렇게 함으로써 스토리지 엔진은 디스크의 데이터 페이지 읽기를 최소화 할 수 있다.
+* **블록 네스티드 루프 조인(block_nested_loop)**
+  * `네스티드 루프 조인`은 조인의 연결 조건이 되는 컬럼에 모두 인덱스가 있는 경우 사용되는 조인 방식이다.
+  * 네스티드 루프 조인과 블록 네스티드 루프 조인의 가장 큰 차이는 `조인 버퍼가 사용되는지 여부`와 `조인에서 드라이빙 테이블과 드리븐 테이블이 어떤 순서로 조인되느냐`이다.
+    * 네스티드 루프 조인: 조인 버퍼 미사용, 드라이빙 테이블에서 한 행을 가져와 드리븐 테이블에서 해당 행과 일치하는 레코드를 찾는 방법
+    * 블록 네스티드 루프 조인: 조인 버퍼 사용, 드라이빙 테이블에서 가져온 데이터를 블록 단위로 버퍼에 저장하고 여러 레코드를 한꺼번에 드리븐 테이블과 조인한다.**(조인 버퍼가 사용되는 조인에서는 결과의 정렬 순서가 흐트러질 수 있음을 기억해야한다.)**
+* **인덱스 컨디션 푸시다운(index_condition_pushdown)**
+  * `인덱스 컨디션 푸시다운`은 인덱스 스캔 중에 조건절을 최대한 일찍 적용하여 디스크로부터 불필요한 데이터 접근을 줄이는 최적화 기법이다.
+  * `index_condition_pushdown`으로 활성화, 비활성화 할 수 있다.
+  * 쿼리의 성능이 몇 배에서 몇십 배로 향상될 수도 있는 중요한 기능이다.
+* **인덱스 확장(use_index_extensions)**
+  * 해당 옵션은 InnoDB 스토리지 엔진을 사용하는 테이블에서 세컨더리 인덱스에 자동으로 추가된 프라이머리 키를 활용할 수 있게 할지를 결정하는 옵션이다.
+  * 해당 옵션 사용 시 옵티마이저가 인덱스 확장 기능을 활성화하여 더 많은 경우에 커버링 인덱스를 사용할 수 있다. 이를 통해 테이블에 직접 접근하는 횟수를 줄이고, 성능을 향상시킬 수 있다.
+* **인덱스 머지(index_merge)**
+  * 쿼리에 사용된 각각의 조건이 서로 다른 인덱스를 사용할 수 있고 그 조건을 만족하는 레코드 건수가 많을 것으로 예상될 때 MySQL 서버는 인덱스 머지 실행 계획을 선택한다.
+* **인덱스 머지 - 교집합(index_merge_intersection)**
+  * `두 개 이상의 인덱스 교집합을 찾아 결과를 반환하는 방식`이다.
+  * 즉, 쿼리 조건을 만족하는 레코드를 두 개 이상의 인덱스에서 모두 찾아 모든 인덱스가 공통적으로 일치하는 레코드만 반환한다.
+* **인덱스 머지 - 합집합(index_merge_union)**
+  * 두 개 이상의 인덱스에서 각각의 결과를 결합하여 합집합을 반환하는 방식이다.
+  * 정렬 없이 단순히 결과를 합집합으로 결합한다. 중복되는 레코드는 결합하면서 제거한다.
+* **인덱스 머지 - 정렬 후 합집합(index_merge_sort_union)**
+  * `두 개 이상의 인덱스에서 각각 일치하는 레코드를 찾고 이를 합집합으로 결합한 후 정렬하여 결과를 반환하는 방식`이다
+  * 즉, 쿼리 조건을 만족하는 레코드를 각 인덱스에서 따로 찾아낸 후 이를 정렬하여 중복 제거 후 결과를 반환한다.
+* **세미 조인(semijoin)**
+* **테이블 풀-아웃(Table Pull-out)**
+* **퍼스트 매치(firstmatch)**
+* **루스 스캔(loosescan)**
+* **구체화(Materialization)**
+* **중복 제거(Duplicated Weed-out)**
+* **컨디션 팬아웃(condition_fanout_filter)**
+* **파생 테이블 머지(derived_merge)**
+* **인비저블 인덱스(use_invisible_indexes)**
+* **스킵 스캔(skip_scan)**
+* **해시 조인(hash_join)**
+* **인덱스 정렬 선호(prefer_ordering_index)**
+### 조인 최적화 알고리즘
 
 ## 🦅 9.4 쿼리 힌트
