04_아키텍처_혼자질답해보기

--- a/Real MySQL(1)/04_아키텍처_혼자질답해보기.md
+++ b/Real MySQL(1)/04_아키텍처_혼자질답해보기.md
@@ -27,3 +27,10 @@
   <summary>MVCC에 대해 설명해주세요.</summary>
   MVCC는 DBMS에서 동시성 제어를 위해 사용되는 기법 중 하나입니다. MVCC는 여러 트랜잭션이 동시에 데이터에 접근할 때 잠금을 사용하지 않고도 일관성있는 읽기를 제공하며, 트랜잭션 간의 충돌을 최소화하는 적이 주목적 입니다.
 </details>
+
+<details>
+  <summary>id, name 컬럼을 갖는 member 테이블이 있다고 가정했을 때, (12, 홍길동)이라는 한 건의 레코드를 INSERT 했어요. 그럼 id가 12인 레코드에 대해서 name을 박길동이라고 UPDATE하려는 경우 COMMIT이나 ROLLBACK을 하지 않았을 때 SELECT * FROM member WHERE id=12;로 조회하면 어떤 데이터가 조회되나요?</summary>
+  MySQL 서버의 설정된 트랜잭션 격리 수준에 따라 다르게 조회됩니다.</br>
+  READ_UNCOMMITED인 경우 InnoDB 버퍼 풀이 현재 가지고 있는 변경된 데이터를 읽어서 반환합니다.</br>
+  READ_COMMITED, REPEATABLE_READ, SERIALIZABLE인 경우 아직 커밋되지 않았기 때문에 변경되기 이전의 내용을 보관하고 있는 언두 영역의 데이터를 반환합니다.
+</details>
