--- a/Real MySQL(1)/05_트랜잭션과 잠금_ 혼자질답해보기.md
+++ b/Real MySQL(1)/05_트랜잭션과 잠금_ 혼자질답해보기.md
@@ -5,6 +5,18 @@
 </details>
 
 <details>
+  <summary>트랜잭션에 대해서 주의할 점은 없을까요?</summary>
+  프로그램 코드에서 트랜잭션의 범위를 최소화해야 합니다. 최소화하지 않으면 DBMS 서버가 높은 부하 상태로 빠지거나 위험한 상태에 빠지는 경우가 빈번하게 발생하기 때문입니다.
+</details>
+
+<details>
+  <summary>InnoDB 스토리지 엔진 잠금 종류에 대해 설명해주세요. 각각 어떠한 경우에 해당 락이 사용되나요?</summary>
+  레코드 락은 SELECT FOR UPDATE 또는 SELECT LOCK IN SHARE MODE와 같은 쿼리에서 특정 레코드에 대한 락이 필요할 때 사용됩니다.</br>
+  갭 락은 반복 가능한 읽기(REPEATABLE READ) 격리 수준에서 인덱스 기반 범위 쿼리(SELECT FOR UPDATE)를 실행할 때 사용됩니다.</br>
+  넥스트 키 락은 REPEATABLE READ 격리 수준에서 인덱스를 사용하는 쿼리일 경우 자동으로 사용됩니다.
+</details>
+
+<details>
   <summary>MySQL의 트랜잭션 격리 수준을 설명해주세요.</summary>
   트랜잭션 격리 수준은 여러 트랜잭션이 동시에 처리될 때 특정 트랜잭션이 다른 트랜잭션에서 변경하거나 조회하는 데이터를 볼 수 있게 허용할지 말지를 결정하는 것입니다. MySQL에서 격리 수준은 4가지가 존재하는데 각 격리 수준은 데이터 정합성과 동시성 성능의 사이에서 균형을 맞춥니다. 따라서 애플리케이션의 특성과 요구사항에 따라 적절한 격리 수준을 선택해야 합니다. 
 </details>
