--- a/Real MySQL(1)/04_아키텍처_혼자질답해보기.md
+++ b/Real MySQL(1)/04_아키텍처_혼자질답해보기.md
@@ -24,6 +24,16 @@
 </details>
 
 <details>
+  <summary>MySQL 스레딩 구조에 대해서 설명해주세요. 각각의 스레드가 하는 역할도 같이 설명해주세요.</summary>
+  MySQL 스레드는 포그라운드 스레드와 백그라운드 스레드로 이루어져있습니다. 포그라운드 스레드는 각 클라이언트 사용자가 요청하는 쿼리 문장을 처리합니다. 또한 InnoDB에서만 스레드가 버퍼나 캐시까지 처리하고 그 이후의 작업은 백그라운드 스레드에서 처리합니다. 백그라운드 스레드는 읽기, 쓰기, 로그 스레드로 이루져있으며 인서트 버퍼 병합, 로그 디스크 기록과 같은 작업이 처리됩니다.
+</details>
+
+<details>
+  <summary>InnoDB 스토리지 엔진의 아키텍처 특징을 설명해주세요.</summary>
+  프라이머리 키에 의해 클러스터링이 되고 외래 키를 지원하며 mvcc라는 특징을 갖고 있습니다.
+</details>
+
+<details>
   <summary>MVCC에 대해 설명해주세요.</summary>
   MVCC는 DBMS에서 동시성 제어를 위해 사용되는 기법 중 하나입니다. MVCC는 여러 트랜잭션이 동시에 데이터에 접근할 때 잠금을 사용하지 않고도 일관성있는 읽기를 제공하며, 트랜잭션 간의 충돌을 최소화하는 적이 주목적 입니다.
 </details>
@@ -33,4 +43,14 @@
   MySQL 서버의 설정된 트랜잭션 격리 수준에 따라 다르게 조회됩니다.</br>
   READ_UNCOMMITED인 경우 InnoDB 버퍼 풀이 현재 가지고 있는 변경된 데이터를 읽어서 반환합니다.</br>
   READ_COMMITED, REPEATABLE_READ, SERIALIZABLE인 경우 아직 커밋되지 않았기 때문에 변경되기 이전의 내용을 보관하고 있는 언두 영역의 데이터를 반환합니다.
+</details>
+
+<details>
+  <summary>어댑티브 해시 인덱스는 무엇이며 왜 사용하나요?</summary>
+  어댑티브 해시 인덱스는 자주 접근되는 데이터 페이지에 대해 해시 인덱스를 자동으로 생성하는 InnoDB의 기능입니다. 어댑티브 해시 인덱스를 사용하지 않는 경우 B-Tree 인덱스에서 특정 값을 찾기 위해서는 B-Tree의 루트노트를 거쳐 브랜치 노드, 리프 노드까지 찾아야 원하는 레코드를 찾을 수 있습니다. 이는 성능 저하를 유발하기 때문에 B-Tree 검색 시간을 줄여주기 위해 사용합니다.
+</details>
+
+<details>
+  <summary>리두로그가 무엇인지 설명해주세요.</summary>
+  리두 로그는 MySQL에서 Write Ahead Logging(WAL)을 구현한 기능으로, 데이터베이스의 트랜잭션이 커밋되기 전 변경된 내용을 기록하는 로그 파일입니다. 장애 발생 시 빠른 복구를 위해 사용됩니다.
 </details>
