--- a/Real MySQL(1)/08_인덱스_ 혼자질답해보기.md
+++ b/Real MySQL(1)/08_인덱스_ 혼자질답해보기.md
@@ -20,3 +20,13 @@
   <summary>B-Tree 인덱스는 어떤 구조를 갖고 있나요?</summary>
   트리 구조의 최상위에 하나의 루트 노드, 가장 하위에 리프 노드, 루트 노드와 리프 노드 사이에 브랜치 노드의 구조를 갖고 있습니다.
 </details>
+
+<details>
+  <summary>클러스터링 인덱스는 무엇인가요?</summary>
+  클러스터링 인덱스는 프라이머리 키와 데이터가 결합된 형태로 데이터를 물리적으로 정렬하여 저장하는 인덱스입니다. 클러스터링 키로 검색할 때 처리 성능이 매우 빠르다는 장점이 있지만, 테이블의 모든 세컨더리 인덱스가 클러스터링 키를 갖기 때문에 클러스터링 키 값의 크기가 클 경우 전체적으로 인덱스의 크기가 커진다는 단점이 있습니다.
+</details>
+
+<details>
+  <summary>그럼 프라이머리 키가 없는 테이블은 클러스터링 테이블이 어떻게 구성되나요?</summary>
+  프라이머리 키가 없으면 먼저 NOT NULL 옵션을 가진 유니크 인덱스 중 첫 번째 인덱스를 클러스터링 키로 선택합니다. 이 경우도 없다면, 자동으로 유니크한 값을 가지도록 증가되는 칼럼을 내부적으로 추가한 후, 클러스터링 키로 선택합니다.
+</details>
