--- a/Real MySQL(2)/13_파티션.md
+++ b/Real MySQL(2)/13_파티션.md
@@ -1,8 +1,16 @@
 ## 🦅 13.1 개요
+파티션 기능은 테이블을 논리적으로는 하나의 테이블이지만 물리적으로는 여러 개의 테이블로 분리해서 관리할 수 있게 해준다.
 * **파티션을 사용하는 이유**
   * 단일 INSERT와 단일 또는 범위 SELECT의 빠른 처리
+    * 큰 테이블을 파티션하지 않고 하나의 큰 테이블로 사용하면 인덱스도 커지고 그만큼 물리적인 메모리 공간도 많이 필요해진다.
+    * 결과적으로 파티션은 데이터와 인덱스를 조각화해서 물리적 메모리를 효율적으로 사용할 수 있게 만들어준다.
+    * 💡 워킹 셋: 활발하게 사용되는 데이터(ex) 게시물 테이블. 100만 건이 저장된 테이블이라고 하더라도 그중에서 최신 20~30%의 게시물만 활발하게 조회된다.)
   * 데이터의 물리적인 저장소를 분리
+    * 데이터 파일이나 인덱스 파일이 파일 시스템에서 차지하는 공간이 크다면 그만큼 백업이나 관리 작업이 어려워진다. 더욱이 테이블의 데이터나 인덱스를 파일 단위로 관리하는 MySQL에서 더 치명적인 문제가 될 수도 있다.
+    * 이러한 문제는 파티션을 통해 파일의 크기를 조절하거나 파티션별 파일들이 저장될 위치나 디스크를 구분해서 지정해 해결하는 것도 가능하다. 하지만 MySQL에서는 테이블의 파티션 단위로 인덱스를 생성하거나 파티션별로 다른 인덱스를 가지는 형태는 지원하지 않는다.
   * 이력 데이터의 효율적인 관리
+    * 로그 테이블에서 불필요해진 데이터를 백업하거나 삭제하는 작업은 일반 테이블에서는 상당히 고부하의 작업에 속한다.
+    * 로그 테이블을 파티션 테이블로 관리한다면 불필요한 데이터 삭제 작업은 단순히 파티션을 추가하거나 삭제하는 방식으로 간단하고 빠르게 해결할 수 있다.
 * **MySQL 파티션의 내부 처리**
   * 파티션 테이블의 레코드 INSERT
   * 파티션 테이블의 UPDATE
