--- a/Real MySQL(2)/13_파티션.md
+++ b/Real MySQL(2)/13_파티션.md
@@ -13,16 +13,51 @@
     * 로그 테이블을 파티션 테이블로 관리한다면 불필요한 데이터 삭제 작업은 단순히 파티션을 추가하거나 삭제하는 방식으로 간단하고 빠르게 해결할 수 있다.
 * **MySQL 파티션의 내부 처리**
   * 파티션 테이블의 레코드 INSERT
+    * INSERT 쿼리가 실행되면 MySQL 서버는 INSERT되는 칼럼의 값 중에서 파티션 키인 칼럼의 값을 이용해 파티션 표현식을 평가 후 그 결과를 이용해 레코드가 저장될 적절한 파티션을 결정한다. 
   * 파티션 테이블의 UPDATE
+    * 파티션 키 이외의 칼럼만 변경될 때는 파티션이 적용되지 않은 일반 테이블과 마찬가지로 칼럼 값만 변경한다.
+    * 파티션 키 칼럼이 변경될 때는 기존의 레코드가 저장된 파티션에서 해당 레코드를 삭제한다. 그리고 변경되는 파티션 키 칼럼의 표현식을 평가하고, 그 결과를 이용해 레코드를 이동시킬 새로운 파티션을 결정해서 레코드를 새로 저장한다.
   * 파티션 테이블의 검색
+    * 파티션 테이블을 검색할 때 성능에 크게 영향을 미치는 조건
+      * WHERE 절의 조건으로 검색해야 할 파티션을 선택할 수 있는가?
+      * WHERE 절의 조건이 인덱스를 효율적으로 사용(인덱스 레인지 스캔)할 수 있는가?
+    * 위 두 가지 주요 선택사항의 각 조합. 어떻게 실행되는지
+      * 파티션 선택 가능 + 인덱스 효율적 사용 가능
+        * 파티션의 개수와 관계없이 검색을 위해 꼭 필요한 파티션의 인덱스만 레인지 스캔
+      * 파티션 선택 불가 + 인덱스 효율적 사용 가능
+        * WHERE 조건에 일치하는 레코드가 저장된 파티션을 걸러낼 수 없기 때문에 우선 테이블의 모든 파티션을 대상으로 검색해야 한다.
+        * 하지만 각 파티션에 대해서는 인덱스 레인지 스캔을 사용할 수 있기 때문에 최종적으로 테이블에 존재하는 모든 파티션의 개수만큼 인덱스 레인지 스캔을 수행해서 검색하게 된다.
+      * 파티션 선택 가능 + 인덱스 효율적 사용 불가
+        * 검색하려는 레코드가 저장된 파티션을 선별할 수 있기 때문에 파티션 개수와 관계없이 검색을 위해 필요한 파티션만 읽으면 된다.
+        * 하지만 인덱스는 이용할 수 없기 때문에 대상 파티션에 대해 풀 테이블 스캔을 한다. 이는 각 파티션의 레코드 건수가 많으면 상당히 느리게 처리될 것이다.
+      * 파티션 선택 불가 + 인덱스 효율적 사용 불가
+        * WHERE 조건에 일치하는 파티션을 선택할 수가 없기 때문에 테이블의 모든 파티션을 검색해야 한다.
+        * 하지만 각 파티션을 검색하는 작업 자체도 인덱스 레인지 스캔을 사용할 수 없기 때문에 풀 테이블 스캔을 수행해야 한다.
   * 파티션 테이블의 인덱스 스캔과 정렬
+    * 실제 MySQL 서버는 여러 파티션에 대해 인덱스 스캔을 수행할 때 각 파티션으로부터 조건에 일치하는 레코드를 정렬된 순서대로 읽으면서 우선순위 큐(Priority Queue)에 임시로 저장한다. 그리고 우선순위 큐에서 다시 필요한 순서(인덱스의 정렬 순서)대로 데이터를 가져간다.
+    * 결론적으로 파티션 테이블에서 인덱스 스캔을 통해 레코드를 읽을 때 **MySQL 서버가 별도의 정렬 작업을 수행하지는 않는다.**
+    * 하지만 일반 테이블의 인덱스 스캔처럼 결과를 바로 반환하는 것이 아니라 내부적으로 큐 처리가 한 번 필요한 것이다.
   * 파티션 프루닝
+    * 최적화 단계에서 필요한 파티션만 골라내고 불필요한 것들은 실행 계획에서 배제하는 것을 파티션 프루닝(Partition pruning)이라고 한다.
 
 ## 🦅 13.2 주의사항
 * **파티션의 제약 사항**
+  * 스토어드 루틴이나 UDF, 사용자 변수 등을 파티션 표현식에 사용할 수 없다.
+  * 파티션 표현식을 일반적으로 칼럼 그 자체 또는 MySQL 내장 함수를 사용할 수 있는데, 여기서 일부 함수들은 파티션 생성은 가능하지만 파티션 프루닝을 지원하지 않을 수도 있다.
+  * 프라이머리 키를 포함해서 테이블의 모든 유니크 인덱스는 파티션 키 칼럼을 포함해야 한다.
+  * 파티션된 테이블의 인덱스는 모두 로컬 인덱스이며, 동일 테이블에 소속된 모든 파티션은 같은 구조의 인덱스만 가질 수 있다. 또한 파티션 개별로 인덱스를 변경하거나 추가할 수 있다.
+  * 동일 테이블에 속한 모든 파티션은 동일 스토리지 엔진만 가질 수 있다.
+  * 최대(서브 파티션까지 포함해서) 8192개의 파티션을 가질 수 있다.
+  * 파티션 생성 이후 MySQL 서버의 sql_mode 시스템 변수 변경은 데이터 파티션의 일관성을 깨뜨릴 수 있다.
+  * 파티션 테이블에서는 외래키를 사용할 수 없다.
+  * 파티션 테이블은 전문 검색 인덱스 생성이나 전문 검색 쿼리를 사용할 수 없다.
+  * 공간 데이터를 저장하는 칼럼 타입(POINT, GEOMETRY, ...)은 파티션 테이블에서 사용할 수 없다.
+  * 임시 테이블(Temporary table)은 파티션 기능을 사용할 수 없다.
 * **파티션 사용 시 주의사항**
   * 파티션과 유니크 키(프라이머리 키 포함)
+    * 종류와 관계없이 테이블에 유니크 인덱스(프라이머리 키 포함)가 있으면 파티션 키는 모든 유니크 인덱스의 일부 또는 모든 칼럼을 포함해야 한다.
   * 파티션과 open_files_limit 시스템 변수 설정
+    * MySQL에서는 일반적으로 테이블을 파일 단위로 관리하기 때문에 MySQL 서버에서 동시에 오픈된 파일의 개수가 상당히 많아질 수 있다. 이를 제한하기 위해 open_files_limit 시스템 변수에 동시에 오픈할 수 있는 적절한 파일의 개수를 설정할 수 있다.
 
 ## 🦅 13.3 MySQL 파티션의 종류
 * **레인지 파티션**
