--- a/Real MySQL(2)/13_파티션.md
+++ b/Real MySQL(2)/13_파티션.md
@@ -60,21 +60,51 @@
     * MySQL에서는 일반적으로 테이블을 파일 단위로 관리하기 때문에 MySQL 서버에서 동시에 오픈된 파일의 개수가 상당히 많아질 수 있다. 이를 제한하기 위해 open_files_limit 시스템 변수에 동시에 오픈할 수 있는 적절한 파일의 개수를 설정할 수 있다.
 
 ## 🦅 13.3 MySQL 파티션의 종류
-* **레인지 파티션**
+* **레인지 파티션**</br>
+  파티션 키의 연속된 범위로 파티션을 정의하는 방법으로, 가장 일반적으로 사용되는 파티션 방법 중 하나다.
   * 레인지 파티션의 용도
+    * 다음과 같은 성격을 지닌 테이블에서는 레인지 파티션을 사용하는 것이 좋다.
+      * 날짜를 기반으로 데이터가 누적되고 연도나 월, 또는 일 단위로 분석하고 삭제해야 할 때
+      * 범위 기반으로 데이터를 여러 파티션에 균등하게 나눌 수 있을 때
+      * 파티션 키 위주로 검색이 자주 실행될 때
+    * 데이터베이스에서 파티션의 장점
+      * 큰 테이블을 작은 크기의 파티션으로 분리
+      * 필요한 파티션만 접근(쓰기와 읽기 모두)
   * 레인지 파티션 테이블 생성
+    * `PARTITION BY RANGE()`
   * 레인지 파티션의 분리와 병합
     * 단순 파티션의 추가
+      * 테이블에 이미 `LESS THAN MAXVALUE` 파티션을 가지고 있는 경우, 새로운 파티션을 추가하려고 하면 에러가 발생한다.
+      * 이럴 경우, `ALTER TABLE ... REORGANIZE PARTITION` 명령을 사용해야 한다.
     * 파티션 삭제
+      * `DROP PARTITION 삭제할 파티션 이름`
+      * 레인지 파티션을 사용하는 테이블에서 파티션을 삭제하는 경우, **항상 가장 오래된 파티션 순서로만 삭제할 수 있다.** 레인지 파션이 4개가 있는데, 중간에 있는 파티션을 먼저 삭제할 수는 없다.
     * 기존 파티션의 분리
+      * `REORGANIZE PARTITION`: 하나의 파티션을 두 개 이상의 파티션으로 분리하고자 할 때 사용
+      * REORGANIZE PARTITION 명령은 기존 파티션의 레코드를 새로운 파티션으로 복사해야 하기 때문에 기존 파티션의 레코드 건수에 따라 시간이 오래 걸릴 수도 있다.
+      * 파티션이 재구성되는 동안은 테이블의 쓰기가 불가능해지므로 파티션 재구성 작업은 서비스 점검 시간대나 쿼리 처리가 많지 않은 시간대에 진행하는 것이 좋다. 
     * 기존 파티션의 병합
-* **리스트 파티션**
+      * 파티션을 병합하는 경우에도 파티션 재구성(REORGANIZE PARTITION)이 필요하며, 이 작업을 테이블에 대해서 읽기 잠금을 필요로 한다.
+* **리스트 파티션**</br>
+  리스트 파티션은 레인지 파티션과 많은 부분에서 흡사하게 동작한다. **둘의 가장 큰 차이는 레인지 파티션은 파티션 키 값의 범위로 파티션을 구성할 수 있지만 리스트 파티션은 파티션 키 값 하나하나를 리스트로 나열해야 한다는 점이다. 또한 리스트 파티션에서는 레인지 파티션과 같이 MAXVALUE 파티션을 정의할 수 없다.**
   * 리스트 파티션의 용도
+    * 다음과 같은 특성을 지닐 때는 리스트 파티션을 사용하는 것이 좋다.
+      * 파티션 키 값이 코드 값이나 카테고리와 같이 고정적일 때
+      * 키 값이 연속되지 않고 정렬 순서와 관계없이 파티션을 해야 할 때
+      * 파티션 키 값을 기준으로 레코드의 건수가 균일하고 검색 조건에 파티션 키가 자주 사용될 때
   * 리스트 파티션 테이블 생성
+    * `PARTITION BY LIST`: 생성할 파티션이 리스트 파티션이라는 것을 명시
+    * VALUES IN (...)을 사용해 파티션별로 저장할 파티션 키 값의 목록을 나열한다.
   * 리스트 파티션의 분리와 병합
+    * 파티션을 정의하는 부분에서 VALUES LESS THAN이 아닌 VALUES IN을 사용한다는 것 외에는 레인지 파티션의 추가 및 삭제, 병합 작업이 모두 같다.
   * 리스트 파티션 주의사항
+    * 명시되지 않은 나머지 값을 저장하는 MAXVALUE 파티션을 정의할 수 없다.
+    * 레인지 파티션과는 달리 NULL을 저장하는 파티션을 별도로 생성할 수 있다.
 * **해시 파티션**
   * 해시 파티션의 용도
+    * 다음과 같은 특성을 지닐 때는 해시 파티션을 사용하는 것이 좋다.
+      * 레인지 파티션이나 리스트 파티션으로 데이터를 균등하게 나누는 것이 어려울 때
+      * 테이블의 모든 레코드가 비슷한 사용 빈도를 보이지만 테이블이 너무 커서 파티션을 적용해야 할 때
   * 해시 파티션 테이블 생성
   * 해시 파티션의 분리와 병합
     * 해시 파티션 추가
