--- a/Real MySQL(2)/13_파티션.md
+++ b/Real MySQL(2)/13_파티션.md
@@ -106,18 +106,48 @@
       * 레인지 파티션이나 리스트 파티션으로 데이터를 균등하게 나누는 것이 어려울 때
       * 테이블의 모든 레코드가 비슷한 사용 빈도를 보이지만 테이블이 너무 커서 파티션을 적용해야 할 때
   * 해시 파티션 테이블 생성
+    * `PARTITION BY HASH`: 파티션 종류를 해시 파티션으로 지정
+    * 해시 파티션의 파티션 키 또는 파티션 표현식은 반드시 정수 타입의 값을 반환해야 한다.
   * 해시 파티션의 분리와 병합
     * 해시 파티션 추가
+      * 해시 파티션은 특정 파티션 키 값을 테이블의 파티션 개수로 MOD 연산한 결괏값에 의해 각 레코드가 저장될 파티션을 결정한다. 즉, 해시 파티션은 테이블에 존재하는 파티션의 개수에 의해 파티션 알고리즘이 변하는 것이다.
+      * 따라서 새로운 파티션이 추가된다면 기존의 각 파티션에 저장된 모든 레코드가 재배치돼야 한다.
+      * 해시 파티션에서 파티션을 추가하거나 생성하는 작업은 많은 부하를 발생시키며, 다른 트랜잭션에서 동일 테이블에 데이터를 변경(`INSERT`, `UPDATE`, `DELETE`)하는 작업은 허용되지 않는다.
     * 해시 파티션 삭제
+      * MySQL 서버가 지정한 파티션 키 값을 가공해서 데이터를 각 파티션으로 분산한 것이므로 각 파티션에 저장된 레코드가 어떤 부류의 데이터인지 사용자가 예측할 수가 없다.
+      * 결국 해시 파티션이나 키 파티션을 사용한 테이블에서 파티션 단위로 데이터를 삭제하는 작업은 의미도 없으며 해서도 안 될 작업이다.
     * 해시 파티션 분할
+      * 해시 파티션이나 키 파티션에서 특정 파티션을 두 개 이상의 파티션으로 분할하는 기능은 없으며, 테이블 전체적으로 파티션의 개수를 늘리는 것만 가능하다.
     * 해시 파티션 병합
+      * 해시나 키 파티션은 2개 이상의 파티션을 하나의 파티션으로 통합하는 기능을 제공하지 않는다. 단지 파티션의 개수를 줄이는 것만 가능하다.
+      * `COALESCE PARTITION 줄이고자 하는 파티션의 개수`: 파티션의 개수를 줄이는 명령어
     * 해시 파티션 주의사항
+      * 특정 파티션만 삭제(DROP PARTITION)하는 것은 불가능하다.
+      * 새로운 파티션을 추가하는 작업은 단순히 파티션만 추가하는 것이 아니라 기존 모든 데이터의 재배치 작업이 필요하다.
+      * 해시 파티션은 레인지 파티션이나 리스트 파티션과는 상당히 다른 방식으로 관리하기 때문에 해시 파티션이 용도에 적합한 해결책인지 확인이 필요하다.
+      * 일반적으로 사용자들에게 익숙한 파티션의 조작이나 특정은 대부분 리스트 파티션이나 레인지 파티션에만 해당하는 것들이 많다. 해시 파티션이나 키 파티션을 사용하거나 조작할 때는 주의가 필요하다.
 * **키 파티션**
   * 키 파티션의 생성
+    * `PARTITION BY KEY`: 키 파티션을 정의한다.
+    * `PARTITIONS`: 생성할 파티션 개수를 지정한다.
   * 키 파티션의 주의사항 및 특이사항
+    * 키 파티션은 MySQL 서버가 내부적으로 MD5() 함수를 이용해 파티션하기 때문에 파티션 키가 반드시 정수 타입이 아니어도 된다. 해시 파티션으로 파티션이 어렵다면 키 파티션 적용을 고려해보자.
+    * 프라이머리 키나 유니크 키를 구성하는 칼럼 중 일부만으로도 파티션할 수 있다.
+    * 유니크 키를 파티션 키로 사용할 때 해당 유니크 키는 반드시 NOT NULL이어야 한다.
+    * 해시 파티션에 비해 파티션 간의 레코드를 더 균등하게 분할할 수 있기 떄문에 키 파티션이 더 효율적이다.
 * **리니어 해시 파티션/리니어 키 파티션**
   * 리니어 해시 파티션/리니어 키 파티션의 추가 및 통합
+    * 리니어 해시 파티션이나 리니어 키 파티션의 경우 단순히 나머지 연산으로 레코드가 저장될 파티션을 결정하는 것이 아니라 "Power-of-two" 분배 방식을 사용하기 때문에 파티션의 추가나 통합 시 특정 파티션의 데이터에 대해서만 이동 작업을 하면 된다.
+    * 그래서 파티션을 추가하거나 통합하는 작업에서 나머지 파티션의 데이터는 재분배 대상이 되지 않는 것이다.
   * 리니어 해시 파티션/리니어 키 파티션의 추가
+    * 새로운 파티션을 주가할 때 특정 파티션의 레코드만 재분배되면 된다.
+    * 다른 파티션 데이터는 레코드 재분배 작업과 관련이 없기 때문에 일반 해시 파티션이나 키 파티션의 파티션 추가보다 매우 빠르게 처리할 수 있다.
   * 리니어 해시 파티션/리니어 키 파티션의 통합
+    * 새로운 파티션을 추가할 때와 같이 일부 파티션에 대해서만 레코드 통합 작업이 필요하다.
+    * 통합되는 파티션만 레코드 이동이 필요하며, 나머지 파티션의 레코드는 레코드 재분배 작업에서 제외된다.
   * 리니어 해시 파티션/리니어 키 파티션과 관련된 주의사항
+    * 리니어 파티션은 "Power-of-two" 알고리즘을 사용하기 때문에 파티션을 추가하거나 통합할 때 작업의 범위를 최소화하는 대신 각 파티션이 가지는 레코드의 건수는 일반 해시 파티션이나 키 파티션보다는 덜 균등해질 수 있다.
+    * 해시 파티션이나 키 파티션을 사용하는 테이블에 대해 새로운 파티션을 추가하거나 삭제해야 할 요건이 많다면 리니어 해시 파티션 또는 리니어 키 파티션을 적용하는 것이 좋다.
+    * 파티션을 조정할 필요가 거의 없다면 일반 해시 파티션이나 키 파티션을 사용하는 것이 좋다.
 * **파티션 테이블의 쿼리 성능**
+  * **쿼리의 성능은 테이블에서 얼마나 많은 파티션을 프루닝할 수 있는지가 관건이다.**
