--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -43,10 +43,21 @@
   * **바이너리 로그 파일 위치 기반의 복제에서 트랜잭션 건너뛰기**
     * 복제로 구성돼 있는 MySQL 서버들을 운영하다 보면 종종 레플리카 서버에서 소스 서버로부터 넘어온 트랜잭션이 제대로 실행되지 못하고 에러가 발생해 복제가 멈추는 현상이 발생하기도 한다.
     * 경우에 따라 레플리카 서버에서 문제되는 소스 서버의 트랜잭션을 무시하고 넘어가도록 처리해도 괜찮을 때가 있다. 이 경우 바이너리 로그 위치 기반 복제에서는 `sql_slave_skip_counter` 시스템 변수를 이용해 문제되는 트랜잭션을 건너뛸 수 있다.
-* **글로벌 트랜잭션 아이디(GTID) 기반 복제**
+* **글로벌 트랜잭션 아이디(GTID) 기반 복제**</br>
+  바이너리 로그 파일 위치 기반 복제 방식은 각각의 이벤트들이 바이너리 로그 파일명과 파일 내 위치 값의 조합으로 식별되는데, 문제는 이 같은 식별이 바이너리 로그 파일이 저장돼 있는 소스 서버에서만 유효하다. 동일한 이벤트가 레플리카 서버에서도 동일한 파일명의 동일한 위치에 저장된다는 보장이 없다. 한마디로 복제에 투입된 서버들마다 동일한 이벤트에 대해 서로 다른 식별 값을 갖게 되는 것이다.
   * GTID의 필요성
   * 글로벌 트랜잭션 아이디
+    * GTID는 논리적인 의미로서 물리적인 파일의 이름이나 위치와는 전혀 무관하게 생성된다.
+    * MySQL의 GTID는 서버에서 커밋된 각 트랜잭션과 연결된 고유 식별자로, 해당 트랜잭션이 발생한 서버에서 고유할뿐만 아니라 그 서버가 속한 복제 토폴로지 내 모든 서버에서 고유하다.
+    * `GTID = [source_id]:[transaction_id]`
   * 글로벌 트랜잭션 아이디 기반의 복제 구축
+    * MySQL 서버에서 GTID를 활성화하는 것과 GTID 기반의 복제를 사용하는 것은 별개이며, GTID 활성화는 GTID 복제를 위한 하나의 조건이다.
+    * 즉, MySQL 서버의 GTID는 활성화돼 있다 하더라도 복제는 바이너리 로그 파일 위치 기반의 복제를 사용할 수도 있다.
+    * **GTID를 사용하고 있는 소스 서버에 레플리카 서버를 GTID 기반 복제로 연결하는 과정**
+      1. 설정 준비
+      2. 복제 계정 준비
+      3. 데이터 복사
+      4. 복제 시작
   * 글로벌 트랜잭션 아이디 기반 복제에서 트랜잭션 건너뛰기
   * Non-GTID 기반 복제에서 GTID 기반 복제로 온라인 변경
   * GTID 기반 복제 제약 사항
