--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -59,15 +59,55 @@
       3. 데이터 복사
       4. 복제 시작
   * 글로벌 트랜잭션 아이디 기반 복제에서 트랜잭션 건너뛰기
+    * 만약 레플리카 서버에서 소스 서버로부터 넘어온 트랜잭션을 무시하고 싶다면 레플리카 서버에서 수동으로 빈 트랜잭션을 생성해 GTID 값을 만들어야 한다.
   * Non-GTID 기반 복제에서 GTID 기반 복제로 온라인 변경
+    * MySQL 8.0에서는 서비스가 현재 동작하고 있는 상태에서 MySQL 서버가 GTID를 사용하도록 혹은 사용하지 않도록 GTID 모드를 온라인으로 전환할 수 있는 기능을 제공한다.
+    * 이 기능을 통해 기존에 바이너리 로그 위치 기반의 복제를 GTID 기반의 복제로 변경할 수 있으며, 그 반대의 경우도 가능하다.
+    * GTID를 사용하는 복제 환경에서는 다음과 같은 패턴의 쿼리들은 안전하지 않다.
+      * 트랜잭션을 지원하는 테이블과 지원하지 않는 테이블을 함께 변경하는 쿼리 혹은 트랜잭션
+      * CRAETE TABLE ... SELECT ... 구문
+      * 트랜잭션 내에서 CREATE TEMPORARY TABLE. DROP TEMPORARY TABLE 구문 사용
+      *  ➡️ 특징: 소스 서버에서 레플리카 서버로 복제되어 적용될 때 단일 트랜잭션으로 처리되지 않을 수도 있다. GTID가 트랜잭션 단위로 올바르게 할당돼야 복제가 정상적으로 동작한다.
+      *  `enforce_gtid_consistency`: 쿼리들의 실행 가능 여부 제어
+      *  `gtid_mode`: 바이너리 로그에 트랜잭션들이 GTID 기반으로 로깅될 수 있는지 여부, 트랜잭션 유형별로 MySQL 서버에서의 처리 가능 여부 제어
   * GTID 기반 복제 제약 사항
+    * GTID가 활성화된 MySQL 서버에서는 `enforce_gtid_consistency=ON` 옵션으로 인해 GTID 일관성을 해칠 수 있는 일부 유형의 쿼리들은 실행할 수 없다.
+    * GTID 기반 복제가 설정된 레플리카 서버에서는 sql_slave_skip_counter 시스템 변수를 사용해 복제된 트랜잭션을 건너뛸 수 없다.
+    * GTID 기반 복제에서 CHANGE REPLICATION SOURCE TO(또는 CHANGE MASTER TO) 구문의 IGNORE_SERVER_IDS 옵션은 더 이상 사용되지 않는다.
 
 ## 🦅 16.4 복제 데이터 포맷
 * **Statement 기반 바이너리 로그 포맷**
+  * 변경 이벤트에 대해 이벤트를 발생시킨 SQL문을 바이너리 로그에 기록하는 방식이다.
+  * 하나의 SQL문은 여러 개의 데이터를 수정할 수 있는데, 이 경우 Statement 포맷에서는 바이너리 로그에 SQL문 하나만 기록된다.
+  * 장점
+    * 바이너리 로그 파일의 용량이 작아지므로 사용자 입장에서는 저장 공간에 대한 부담을 덜 수 있으며, 원격으로 바이너리 로그를 백업하거나 혹은 원격에 위치한 레플리카 서버와 복제할 때도 좀 더 빠르게 처리될 수 있다.
+  * 단점
+    * 비확정적(Non-Deterministic)으로 처리될 수 있는 쿼리가 실행된 경우 Statement 포맷에서는 복제 시 소스 서버와 레플리카 서버 간에 데이터가 달라질 수 있다는 점이다.
+    * Statement 포맷 기반 복제에서 소스 서버와 레플리카 서버 간의 데이터 일관성을 해칠 수 있는 비확정적 쿼리 유형
+      * DELETE/UPDATE 쿼리에서 ORDER BY 절 없이 LIMIT 사용
+      * SELECT ... FOR UPDATE 및 SELECT ... FOR SHARE 쿼리에서 NOWAIT이나 SKIP LOCKED 옵션 사용
+      * LOAD_FILE(), UUID(), UUID_SHORT(), USER(), FOUND_ROWS(), RAND(), VERSION() 등과 같은 함수를 사용하는 쿼리
+      * 동일한 파라미터 값을 입력하더라도 결괏값이 달라질 수 있는 사용자 정의 함수나 스토어드 프로시저를 사용하는 쿼리
+    * Row 포맷으로 복제될 때보다 데이터에 락을 더 많이 건다.
+    * Statement 기반 바이너리 로그 포맷은 트랜잭션 격리 수준이 반드시 "REPEATABLE-READ" 이상이어야 한다.
 * **Row 기반 바이너리 로그 포맷**
+  * MySQL 서버에서 데이터 변경이 발생했을 때 변경된 값 자체가 바이너리 로그에 기록되는 방식이다.
+  * Row 포맷에서는 소스 서버에서 실행된 쿼리가 UUID(), USER() 등과 같은 비확정적 함수를 사용했다 하더라도 레플리카 서버에서 똑같이 이 함수가 다시 실행되는 것이 아니라 함수의 결괏값을 전달받아 처리되므로 이 같은 경우에 있어서도 안전하게 복제가 가능하다.
+  * 다음과 같은 쿼리들이 실행되는 경우 Statement 포맷보다 락이 최소화되어 처리된다.
+    * INSERT ... SELECT
+    * INSERT with AUTO_INCREMENT
+    * 적절한 인덱스가 없어 풀스캔으로 처리되는 UPDATE/DELETE
+  * 변경된 데이터가 그대로 바이너리 로그에 기록되기 때문에 만약 MySQL 서버에서 실행된 쿼리가 굉장히 많은 데이터를 변경한 경우에는 변경된 데이터가 전부 기록되므로 바이너리 로그 파일 크기가 단시간에 매우 커질 수 있다.
 * **Mixed 포맷**
-* **Row 포맷의 용향 최적화**
+  * 사용자는 MySQL 서버가 두 가지 바이너리 로그 포맷을 혼합해서 사용하도록 설정할 수 있다.
+  * MIXED 방식을 사용하면 Statement 포맷과 Row 포맷의 장점만 취해서 사용하는 것으로 생각할 수 있지만 MySQL 서버가 내부적으로 설정된 기준과 기술적인 측면을 고려새 자동으로 두 포맷을 번갈아 사용하는 것이므로 예상했던 것과 다르게 처리될 수도 있다.
+  * 따라서 MIXED 포맷만이 제일 좋은 방법이라고 할 수는 없으며, 사용자는 자신이 사용하는 쿼리 형태에 제일 적합한 방식이 어떤 방식인지를 고려해서 설정하는 것이 좋다.
+* **Row 포맷의 용향 최적화**</br>
+  사용자들이 Row 기반의 바이너리 포맷을 사용할지 망설이는 대표적인 이유는 바이너리 로그 파일의 용량이 Statement 포맷을 사용할 때보다 많이 커질 수 있다는 점이다.
   * 바이너리 로그 Row 이미지
+    * MySQL에서는 Row 포맷의 바이너리 로그 파일 용량을 최소화하기 위해 저장되는 변경 데이터의 칼럼 구성을 제어하는 `binlog_row_image`라는 시스템 변수를 제공한다.
+    * Row 포맷을 사용할 경우 바이너리 로그에는 각 변경 데이터마다 변경 전 레코드(Before-Image)와 변경 후 레코드(After-Image)가 함께 저장되는데, `binlog_row_image` 시스템 변수는 각 변경 전후 레코드들에 대해 테이블의 어떤 칼럼들을 기록할 것인지를 결정한다.
+    * 옵션: full, minimal, noblob
   * 바이너리 로그 트랜잭션 압축
 
 ## 🦅 16.5 복제 동기화 방식**
