--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -112,5 +112,58 @@
 
 ## 🦅 16.5 복제 동기화 방식**
 * **비동기 복제(Asynchronous replication)**
+  * MySQL의 복제는 기본적으로 비동기 방식으로 동작한다. 비동기 방식이란 소스 서버가 자신과 복제 연결된 레플리카 서버에서 변경 이벤트가 정상적으로 전달되어 적용됐는지를 확인하지 않는 방식이다.
+  * 비동기 복제 방식에서 소스 서버는 레플리카 서버로 변경 이벤트가 잘 전달됐는지, 실제로 적용됐는지 할지 못하며 이에 대한 어떠한 보장도 하지 않는다.
+  * 비동기 복제는 소스 서버가 각 트랜잭션에 대해 레플리카 서버로 전송되는 부분을 고려하지 않기 때문에 트랜잭션 처리에 있어서도 좀 더 빠른 성능을 보이고, 아울러 레플리카 서버에 문제가 생기더라도 소스 서버는 아무런 영향도 받지 않는다는 장점이 있다.
+  * 비동기 복제 방식은 소스 서버에 레플리카 서버를 여러 대 연결한다 해도 소스 서버에서 큰 성능 저하가 없으므로 레플리카 서버를 확장해서 읽기 트래픽을 분산하는 용도로 제격이라 할 수 있다.
 * **반동기 복제(Semi-synchronous replication)**
-  * 반동기 복제 설정 방법
+  * 반동기 복제에서 소스 서버는 레플리카 서버가 소스 서버로 부터 전달받은 변경 이벤트를 릴레이 로그에 기록 후 응답(ACK)을 보내면 그 때 트랜잭션을 완전히 커밋시키고 클라이언트에 결과를 반환한다.
+  * 따라서 반동기 복제에서는 소스 서버에서 커밋되어 정상적으로 결과가 반환된 모든 트랜잭션들에 대해 적어도 하나의 레플리카 서버에서는 해당 트랜잭션들이 전송됐음을 보장한다.
+  * 중요한 부분은 레플리카 서버에 "전송"됐음을 보장한다는 것이지, 실제로 복제된 트랜잭션이 레플리카 서버에 "적용"되는 것까지 보장한다는 것은 아니다. 그래서 이 동기화 방식의 이름이 반동기인 것이다.
+  * 반동기 복제에서는 소스 서버가 트랜잭션 처리 중 어느 지점에서 레플리카 서버의 응답(ACK)을 기다리느냐에 따라 소스 서버에서 장애가 발생했을 때 사용자가 겪을 수 있는 문제 상황이 조금 다를 수 있다.
+    * rpl_semi_sync_master_point 시스템 변수가 `AFTER_COMMIT`
+    * rpl_semi_sync_master_point 시스템 변수가 `AFTER_SYNC`
+      * 소스 서버에 장애가 발생했을 때 팬텀 리드(Phantom Read)가 발생하지 않음
+      * 장애가 발생한 소스 서버에 대해 좀 더 수월하게 복구 처리가 가능
+        
+## 🦅 16.6 복제 토폴로지**
+* **싱글 레플리카 복제 구성**
+  * 싱글 레플리카 복제는 하나의 소스 서버에 하나의 레플리카 서버만 연결돼 있는 복제 형태를 말한다.
+  * 이렇게 소스 서버와 레플리카 서버가 일대일로 구성된 형태에서는 레플리카 서버를 정말 예비용 서버로서만 사용하는 게 제일 적합하다고 할 수 있다.
+* **멀티 레플리카 복제 구성**
+  * 멀티 레플리카 복제는 하나의 소스 서버에 2개 이상의 레플리카 서버를 연결한 복제 형태를 말한다.
+  * 서비스 트래픽이 크게 증가하면 소스 서버 한 대에서만 쿼리 요청을 처리하기에는 벅찰 수 있는데, 이렇게 증가된 쿼리 요청은 대부분의 경우 쓰기보다는 읽기 요청이 더 많으므로 사용자는 멀티 레플리카 형태로 복제 구성을 전환해 읽기 요청 처리를 분산시킬 수 있다.
+* **체인 복제 구성**
+  * 멀티 레플리카 복제 구성에서 레플리카 서버가 너무 많아 소스 서버의 성능에 악영향이 예상된다면 1:M:M 구조의 체인 복제 구성을 고려해 볼 수 있다.
+  * 만약 하나의 소스 서버에 연결된 레플리카 서버 수가 많다면 바이너리 로그를 읽고 전달하는 작업 자체가 부하가 될 수 있다.
+  * 이 복제 형태는 MySQL 서버를 업그레이드하거나 장비를 일괄 교체할 때도 많이 사용된다.
+  * 체인 복제 구성을 사용할 때는 중간 계층의 서버에서 장애가 발생하는 경우 하위 계층의 레플리카 서버들도 복제가 중단된다. 따라서 장애를 처리할 때 복잡도가 좀 더 높을 수 있다는 점에 유의해야 한다.
+* **듀얼 소스 복제 구성**
+  * 듀얼 소스 복제 구성은 두 개의 MySQL 서버가 서로 소스 서버이자 레플리카 서버로 구성돼 있는 형태를 말한다.
+  * 듀얼 소스 구성은 두 MySQL 서버 모두 쓰기가 가능하다는 것이 제일 큰 특징이며, 각 서버에서 변경한 데이터는 복제를 통해 다시 각 서버에 적용되므로 양쪽에서 쓰기가 발생하지만 두 서버는 서로 동일한 데이터를 갖게 된다.
+  * 듀얼 소스 복제 구성을 사용할 때는 다음과 같은 부분에서 문제가 발생할 수 있다.
+    * 동일한 데이터를 각 서버에서 변경
+    * 테이블에서 Auto-Increment 키 사용
+* **멀티 소스 복제 구성**
+  * 멀티 소스 복제 구성은 하나의 레플리카 서버가 둘 이상의 소스 서버를 갖는 형태를 말한다.
+  * **멀티 소스 복제 동작**
+  * **멀티 소스 복제 구축**
+    
+## 🦅 16.7 복제 고급 설정**
+* **지연된 복제(Delayed Replication)**
+* **멀티 스레드 복제(Multi-threaded Replication)**
+  * 데이터베이스 기반 멀티 스레드 복제
+  * LOGICAL CLOCK 기반 멀티 스레드 복제
+    * 바이너리 로그 그룹 커밋
+    * Commit-parent 기반 LOGICAL CLOCK 방식
+    * 잠금(Lock) 기반 LOGICAL CLOCK 방식
+    * WriteSet 기반 LOGICAL CLOCK 방식
+  * 멀티 스레드 복제와 복제 포지션 정보
+* **크래시 세이프 복제(Crash-safe Replication)**
+  * 서버 장애와 복제 실패
+  * 복제 사용 형태별 크래시 세이프 복제 설정
+    * 바이너리 로그 파일 위치 기반 복제 + 싱글 스레드 동기화
+    * 바이너리 로그 파일 위치 기반 복제 + 멀티 스레드 동기화
+    * GTID 기반 복제 + 싱글 스레드 동기화
+    * GTID 기반 복제 + 멀티 스레드 동기화
+* **필터링된 복제(Filtered Replication)**
