--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -146,9 +146,22 @@
     * 테이블에서 Auto-Increment 키 사용
 * **멀티 소스 복제 구성**
   * 멀티 소스 복제 구성은 하나의 레플리카 서버가 둘 이상의 소스 서버를 갖는 형태를 말한다.
+  * 멀티 소스 복제 구성은 주로 다음과 같은 목적으로 사용된다.
+    * 여러 MySQL 서버에 존재하는 각기 다른 데이터를 하나의 MySQL 서버로 통합
+    * 여러 MySQL 서버에 샤딩돼 있는 테이블 데이터를 하나의 테이블로 통합
+    * 여러 MySQL 서버의 데이터들을 모아 하나의 MySQL 서버에서 백업을 수행
+    * ➡️ 분석에 필요한 데이터들이 여러 곳에 나눠져 있어 이를 한곳으로 모아 좀 더 빠르고 편리하게 분석을 수행하고자 할 때 멀티 소스 복제 형태를 사용하면 매우 효율적이다.
+    * ➡️ 또한 늘어날 서비스 트래픽에 대비해 사전에 MySQL 서버들을 동일한 테이블 스키마 구조를 가지는 샤드 형태(분산해서 사용하는 형태)로 구성해뒀으나 예상했던 것만큼 트래픽이 유입되지 않은 경우 멀티 소스 복제를 구성해서 샤딩된 테이블들의 데이터를 통합해 MySQL 서버 수를 줄일 수도 있다.
   * **멀티 소스 복제 동작**
+    * MySQL의 멀티 소스 복제에서 레플리카 서버는 자신과 연결된 소스 서버들의 변경 이벤트들을 동시점에, 병렬로 동기화한다.
+    * 이는 각 소스 서버들에 대한 복제가 독립적으로 처리되는 것을 의미하며, 각각의 독립된 복제 처리를 채널(Channel)이라고 한다.
+    * 각 복제 채널은 개별적인 레플리케이션 I/O 스레드, 릴레이 로그, 레플리케이션 SQL 스레드를 가지며, 채널의 이름은 어느 소스 서버와의 복제 연결인지를 구별할 수 있는 식별자 역할을 한다.
   * **멀티 소스 복제 구축**
-    
+    * 멀티 소스 복제로 연결할 소스 서버들 중에서 두 개 이상의 소스 서버에서 데이터를 가져와야 한다면 mysql 데이터베이스와 같이 공통으로 가지고 있는 데이터베이스와 InnoDB의 시스템 테이블 스페이스의 충돌과 병합을 고려해야 한다.
+      * mysqldump와 같은 논리 수준의 백업 도구 이용
+      * XtraBackup과 같은 물리 수준의 백업 도구 이용
+      * ➡️ 서버가 갖고 있는 데이터가 크다면 XtraBackup을, 갖고 있는 데이터가 크지 않다면 mysqldump를 사용한다.
+
 ## 🦅 16.7 복제 고급 설정**
 * **지연된 복제(Delayed Replication)**
 * **멀티 스레드 복제(Multi-threaded Replication)**
