--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -110,7 +110,7 @@
     * 옵션: full, minimal, noblob
   * 바이너리 로그 트랜잭션 압축
 
-## 🦅 16.5 복제 동기화 방식**
+## 🦅 16.5 복제 동기화 방식
 * **비동기 복제(Asynchronous replication)**
   * MySQL의 복제는 기본적으로 비동기 방식으로 동작한다. 비동기 방식이란 소스 서버가 자신과 복제 연결된 레플리카 서버에서 변경 이벤트가 정상적으로 전달되어 적용됐는지를 확인하지 않는 방식이다.
   * 비동기 복제 방식에서 소스 서버는 레플리카 서버로 변경 이벤트가 잘 전달됐는지, 실제로 적용됐는지 할지 못하며 이에 대한 어떠한 보장도 하지 않는다.
@@ -126,7 +126,7 @@
       * 소스 서버에 장애가 발생했을 때 팬텀 리드(Phantom Read)가 발생하지 않음
       * 장애가 발생한 소스 서버에 대해 좀 더 수월하게 복구 처리가 가능
         
-## 🦅 16.6 복제 토폴로지**
+## 🦅 16.6 복제 토폴로지
 * **싱글 레플리카 복제 구성**
   * 싱글 레플리카 복제는 하나의 소스 서버에 하나의 레플리카 서버만 연결돼 있는 복제 형태를 말한다.
   * 이렇게 소스 서버와 레플리카 서버가 일대일로 구성된 형태에서는 레플리카 서버를 정말 예비용 서버로서만 사용하는 게 제일 적합하다고 할 수 있다.
@@ -162,11 +162,18 @@
       * XtraBackup과 같은 물리 수준의 백업 도구 이용
       * ➡️ 서버가 갖고 있는 데이터가 크다면 XtraBackup을, 갖고 있는 데이터가 크지 않다면 mysqldump를 사용한다.
 
-## 🦅 16.7 복제 고급 설정**
+## 🦅 16.7 복제 고급 설정
 * **지연된 복제(Delayed Replication)**
+  * 소스 서버에서 실수로 중요한 테이블이나 데이터를 삭제했을 경우같은 문제 상황에 조금 더 유연하게 대처할 수 있도록 MySQL에서는 지연된 복제 기능을 제공한다.
+  * 사용자는 지연된 복제본을 통해 바로 데이터 복구가 가능하다.
+  * 또한 지연된 복제 기능은 데이터 반영에 지연이 있을 때 어떻게 서비스가 동작하는지 테스트할 때도 매우 유용하다.
+  * 레플리카 서버를 소스 서버로부터 얼마나 지연시킬 것인지 지정할 수 있다.
 * **멀티 스레드 복제(Multi-threaded Replication)**
-  * 데이터베이스 기반 멀티 스레드 복제
-  * LOGICAL CLOCK 기반 멀티 스레드 복제
+  * MySQL 복제에서는 레플리카 서버에서 소스 서버로부터 복제된 트랜잭션들을 하나의 스레드가 아닌 여러 스레드로 처리할 수 있게 하는 멀티 스레드 복제 기능을 제공한다.
+  * 소스 서버에서는 여러 세션에서 실행된 DML 쿼리들이 동시에 처리되는데, 만약 소스 서버에서 짧은 시간 동안 다향의 DML 쿼리가 실행되는 경우 레플리카 서버에서는 하나의 스레드가 모든 트랜잭션을 처리하므로 복제 동기화에 지연이 발생한다.
+  * 코디네이터 스레드, 워커 스레드
+  * **데이터베이스 기반 멀티 스레드 복제**
+  * **LOGICAL CLOCK 기반 멀티 스레드 복제**
     * 바이너리 로그 그룹 커밋
     * Commit-parent 기반 LOGICAL CLOCK 방식
     * 잠금(Lock) 기반 LOGICAL CLOCK 방식
