--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -173,12 +173,26 @@
   * 소스 서버에서는 여러 세션에서 실행된 DML 쿼리들이 동시에 처리되는데, 만약 소스 서버에서 짧은 시간 동안 다향의 DML 쿼리가 실행되는 경우 레플리카 서버에서는 하나의 스레드가 모든 트랜잭션을 처리하므로 복제 동기화에 지연이 발생한다.
   * 코디네이터 스레드, 워커 스레드
   * **데이터베이스 기반 멀티 스레드 복제**
+    * 데이터베이스 기반 멀티 스레드 복제는 MySQL 내의 데이터베이스 단위로 병렬 처리를 수행하는 형태를 말한다.
+    * 따라서 만약 MySQL 서버에 데이터베이스가 하나밖에 존재하지 않는다면 이 멀티 스레드 방식은 아무런 장점을 가지지 못한다.
   * **LOGICAL CLOCK 기반 멀티 스레드 복제**
-    * 바이너리 로그 그룹 커밋
-    * Commit-parent 기반 LOGICAL CLOCK 방식
-    * 잠금(Lock) 기반 LOGICAL CLOCK 방식
-    * WriteSet 기반 LOGICAL CLOCK 방식
-  * 멀티 스레드 복제와 복제 포지션 정보
+    * 데이터베이스 기반 멀티 스레드 복제에서는 MySQL 서버에 하나의 데이터베이스만 존재하는 경우 멀티 스레드로 처리될 수 없다는 큰 단점이 있었다.
+    * 또한 여러 개의 데이터베이스가 있다 하더라도 데이터베이스별로 발생하는 DML 쿼리 양이 균등하지 않고 특정 데이터베이스로만 쿼리 요청이 집중되는 경우에는 여전히 레플리카 서버에서 쉽게 복제 지연이 발생할 수 있다는 것도 아쉬운 점 중 하나였다.
+    * LOGICAL CLOCK 방식은 소스 서버에서 트랜잭션들이 바이너리 로그로 기록될 때 각 트랜잭션별로 논리적인 순번 값을 부여해 레플리카 서버에서 트랜잭션의 순번 값을 바탕으로 정해진 기준에 따라 병렬로 실행할 수 있게 하는 방식이다.
+    * **바이너리 로그 그룹 커밋**
+      * 여러 트랜잭션에 대한 커밋을 동시에 진행할 수 있게 코드가 바뀌었고 바이너리 로그 단의 처리 또한 여러 트랜잭션을 함께 처리할 수 있도록 바이너리 로그 그룹 커밋 기능이 도입됐다.
+      * (1) Flush 단계, (2) Sync 단계, (3) Commit 단계
+    * **Commit-parent 기반 LOGICAL CLOCK 방식**
+      * Commit-parent 기반 LOGICAL CLOCK 방식은 동일 시점에 커밋된 트랜잭션들을 레플리카 서버에서 병렬로 실행될 수 있게 한다.
+      * 커밋 시점이 같은 트랜잭션들은 잠금 경합 등과 같이 서로 충돌하는 부분이 없는 트랜잭션들이므로 병렬로 실행될 수 있다.
+      * 같은 시점에 커밋 처리가 시작된 트랜잭션들은 동일한 commit_seq_no 값을 갖게 되며, 레플리카 서버에서는 복제된 트랜잭션들의 commit_seq_no 값을 바탕으로 같은 값을 가진 트랜잭션들을 병렬로 처리하게 된다.
+    * **잠금(Lock) 기반 LOGICAL CLOCK 방식**
+      * 기존 Commit-parent 기반 방식에서는 단순하게 마지막으로 커밋된 선행 트랜잭션의 순번 값(commit_seq_no 값)이 동일한 트랜잭션들만 레플리카 서버에서 병렬로 처리할 수 있었다.
+      * 그러나 잠금 기반 방식에서는 선행 트랜잭션의 순번 값이 동일하지 않더라도 커밋 처리 시점이 겹친다면 그 트랜잭션들은 레플리카 서버에서 병렬로 처리될 수 있다.
+    * **WriteSet 기반 LOGICAL CLOCK 방식**
+      * 트랜잭션의 커밋 처리 시점이 아닌 트랜잭션이 변경한 데이터를 기준으로 병렬 처리 가능 여부를 결정한다.
+      * WriteSet 기반 방식에서는 각 트랜잭션에서 변경한 데이터를 기준으로 병렬 처리를 위한 트랜잭션들의 종속 관계를 정의하므로 이를 위해 내부적으로 트랜잭션에 의해 변경된 데이터들의 목록을 관리한다.
+  * **멀티 스레드 복제와 복제 포지션 정보**
 * **크래시 세이프 복제(Crash-safe Replication)**
   * 서버 장애와 복제 실패
   * 복제 사용 형태별 크래시 세이프 복제 설정
