--- a/Real MySQL(2)/16_복제.md
+++ b/Real MySQL(2)/16_복제.md
@@ -193,11 +193,21 @@
       * 트랜잭션의 커밋 처리 시점이 아닌 트랜잭션이 변경한 데이터를 기준으로 병렬 처리 가능 여부를 결정한다.
       * WriteSet 기반 방식에서는 각 트랜잭션에서 변경한 데이터를 기준으로 병렬 처리를 위한 트랜잭션들의 종속 관계를 정의하므로 이를 위해 내부적으로 트랜잭션에 의해 변경된 데이터들의 목록을 관리한다.
   * **멀티 스레드 복제와 복제 포지션 정보**
-* **크래시 세이프 복제(Crash-safe Replication)**
+* **크래시 세이프 복제(Crash-safe Replication)** -> MySQL에서 장애가 발생했을 때 데이터의 무결성과 일관성을 보장하는 복제 메커니즘
   * 서버 장애와 복제 실패
+    * MySQL 5.5 버전까지는 실행 포지션의 정보가 모두 FILE 형태로만 관리될 수 있었으며, FILE 형태의 경우 각 스레드가 동작할 때 실제 자신이 처리 중인 내용과 포지션 정보를 원자적으로 동기화된 상태로 관리할 수 없었다. 따라서 MySQL 서버가 비정상 종료하는 경우 처리한 내역과 포지션 정보 간에 불일치가 발생할 수 있었다.
+    * MySQL 5.6 버전부터는 포지션 정보들을 TABLE 형태로도 관리할 수 있게 됐다. TABLE로 관리하는 경우 InnoDB 엔진을 사용하므로 SQL 스레드가 트랜잭션 적용과 포지션 정보 업데이트를 한 트랜잭션으로 묶어 원자적으로 처리할 수 있게 됐다.
+    * 그러나 I/O 스레드는 포지션 정보를 TABLE 형태로 관리한다 하더라도 릴레이 로그 파일에 이벤트를 쓰는 작업과 포지션 정보를 업데이트하는 작업이 SQL 스레드처럼 원자적으로 처리될 수 없어 여전히 불일치 문제가 발생할 가능성이 있었다.
   * 복제 사용 형태별 크래시 세이프 복제 설정
     * 바이너리 로그 파일 위치 기반 복제 + 싱글 스레드 동기화
     * 바이너리 로그 파일 위치 기반 복제 + 멀티 스레드 동기화
+      * ✏️ 트랜잭션 갭: 멀티 스레드 복제에서 병렬 처리로 인해 트랜잭션들이 순서대로 처리되지 않아 일시적으로 발생하는 트랜잭션들 간의 간격을 의미한다.
     * GTID 기반 복제 + 싱글 스레드 동기화
     * GTID 기반 복제 + 멀티 스레드 동기화
 * **필터링된 복제(Filtered Replication)**
+  * MySQL 복제에서는 소스 서버의 특정 이벤트들만 레플리카 서버에 적용될 수 있도록 필터링 기능을 제공한다.
+  * 필터링의 주체는 소스 서버와 레플리카 서버 둘 다 될 수 있으며, 사용자는 레플리카 서버에서 좀 더 다양한 형태의 필터링을 사용할 수 있다.
+  * 소스 서버에서의 필터링은 데이터베이스 단위로만 가능하며, 특정 데이터베이스에 대한 이벤트들만 바이너리 로그에 기록되게 하거나 혹은 기록되지 않게끔 설정할 수 있다. (`binlog-do-db`, `binlog-ignore-db`)
+  * 레플리카 서버에서는 MySQL 서버를 재시작하지 않고 동적으로 필터링 설정을 변경할 수도 있다. 레플리카 서버에서의 필터링은 릴레이 로그에 저장된 이벤트들을 실행하는 시점에 적용된다. (`CHANGE REPLICATION FILTER`)
+  * 즉, 소스 서버로부터 이벤트를 가져올 때 미리 필터링해서 이벤트들을 가져오는 것이 아니라 일단 모든 이벤트들을 가져온 다음 이벤트를 실행할 때 필터링을 적용하는 것이다.
+  * `CHANGE REPLICATION FILTER` 구문으로 단순히 이벤트를 필터링하는 것뿐만 아니라 복제된 이벤트를 이벤트가 발생한 원래의 데이터베이스가 아닌 다른 데이터베이스에 적용하도록 설정할 수 있다.
