--- a/단위 테스트/01_단위 테스트의 목표.md
+++ b/단위 테스트/01_단위 테스트의 목표.md
@@ -1,10 +1,25 @@
 ## ✅ 1.1 단위 테스트 현황
+모든 새로운 기술과 마찬가지로 단위 테스트도 계속 발전하고 있다.
+논쟁은 '단위 테스트를 작성해야 하는가?'에서 '좋은 단위 테스트를 작성하는 것은 어떤 의미인가?'로 바뀌었다.
+테스트 작성에 그치지 않고 노력 대비 최대의 이익을 끌어내는 방식으로 단위 테스트를 수행하자.
 ## ✅ 1.2 단위 테스트의 목표
+* 단위 테스트와 코드 설계의 관계
+  * 코드를 단위 테스트하기 어렵다면 코드 개선이 반드시 필요하다는 것을 의미한다. 보통 강결합(tight coupling)에서 저품질이 나타나는데, 여기서 강결합은 제품 코드가 서로 충분히 분리되지 않아서 따로 테스트하기 어려움을 뜻한다.
+  * 코드 조각을 단위 테스트할 수 있다는 것은 좋지 않은 긍정 지표다. 코드베이스를 쉽게 단위 테스트할 수 있다고 해도 반드시 코드 품질이 좋은 것을 의미하지는 않는다.
+* 단위 테스트의 목표는 무엇인가? 소프트웨어 프로젝트의 지속 가능한 성장을 가능하게 하는 것이다.
 * **좋은 테스트와 좋지 않은 테스트를 가르는 요인**
+  * 모든 테스트를 작성할 필요는 없다. 일부 테스트는 아주 중요하고 소프트웨어 품질에 매우 많은 기여를 한다. 그 밖에 다른 테스트는 그렇지 않다.
 ## ✅ 1.3 테스트 스위트 품질 측정을 위한 커버리지 지표
+100% 커버리지라고 해서 반드시 양질의 테스트 스위트라고 보장하지는 않는다. 높은 커버리지의 테스트 스위트도 품질이 떨어질 수 있다.</br>
 * **코드 커버리지 지표에 대한 이해**
+  * 코드 커버리지(테스트 커버리지) = 실행 코드 라인 수 / 전체 라인 수
 * **분기 커버리지 지표에 대한 이해**
+  * 분기 커버리지 = 통과 분기 / 전체 분기 수
+  * 분기 커버리지는 코드 커버리지의 단점을 극복하는 데 도움이 되므로 코드 커버리지보다 더 정확한 결과를 제공한다.
+  * 분기 커버리지 지표는 분기 개수만 다루며, 해당 분기를 구현하는 데 얼마나 코드가 필요한지 고려하지 않는다.
 * **커버리지 지표에 관한 문제점**
+  * 가능한 모든 결과를 검증한다고 보증할 수 없음
+  * 외부 라이브러리의 코드 경로를 고려할 수 없음
 * **특정 커버리지 숫자를 목표로 하기**
 ## ✅ 1.4 무엇이 성공적인 테스트 스위트를 만드는가?
 * **개발 주기에 통합돼 있음**
