01_단위 테스트의 목표

--- a/단위 테스트/01_단위 테스트의 목표.md
+++ b/단위 테스트/01_단위 테스트의 목표.md
@@ -18,12 +18,18 @@
   * 분기 커버리지는 코드 커버리지의 단점을 극복하는 데 도움이 되므로 코드 커버리지보다 더 정확한 결과를 제공한다.
   * 분기 커버리지 지표는 분기 개수만 다루며, 해당 분기를 구현하는 데 얼마나 코드가 필요한지 고려하지 않는다.
 * **커버리지 지표에 관한 문제점**
-  * 가능한 모든 결과를 검증한다고 보증할 수 없음
-  * 외부 라이브러리의 코드 경로를 고려할 수 없음
+  * 가능한 모든 결과를 검증한다고 보증할 수 없음(테스트 대상 시스템의 모든 가능한 결과를 검증한다고 보장할 수 없다.)
+  * 외부 라이브러리의 코드 경로를 고려할 수 없음(외부 라이브러리의 코드 경로를 고려할 수 있는 커버리지 지표는 없다.)
 * **특정 커버리지 숫자를 목표로 하기**
+  * 커버리지 지표를 보는 가장 좋은 방법은 지표 그 자체로 보는 것이며, 목표로 여겨서는 안 된다.
+  * 특정 커버리지 숫자를 목표로 하는 것은 단위 테스트의 목표와 반대되는 그릇된 동기 부여가 된다.
+  * 코드 커버리지를 측정하는 것은 품질 테스트 스위트로 가는 첫걸음일 뿐이다.
 ## ✅ 1.4 무엇이 성공적인 테스트 스위트를 만드는가?
 * **개발 주기에 통합돼 있음**
 * **코드베이스에서 가장 중요한 부분만을 대상으로 함**
 * **최소 유지비로 최대 가치를 끌어냄**
 ## ✅ 1.5 이 책을 통해 배우는 것
 ## 요약
+* 단위 테스트의 목표는 소프트웨어 프로젝트가 지속적으로 성장하게 하는 것이다. 좋은 단위 테스트 스위트는 개발 속도를 지키면서 침체 단계에 빠지지 않게 한다. 이러한 테스트 스위트가 있다면 변경 사항이 회귀로 이어지지 않은 것이라고 확신해도 좋다. 이렇게 하면 코드를 리팩터링하거나 새로운 기능을 추가하는 것이 더 쉬워진다.
+* 커버리지 지표는 좋은 부정 지표이지만 나쁜 긍정 지표다. 커서리지가 낮다는 것은 문제의 징후이지만, 커버리지가 높다고 해서 테스트 스위트의 품질이 높은 것은 아니다.
+* 특정 커버리지를 부과하면 동기 부여가 잘못된 것이다. 시스템의 핵심 부분에 커버리지를 높게 갖는 것은 좋지만, 이 높은 수준을 요건으로 삼는 것은 좋지 않다.
