01_사용자 수에 따른 규모 확장성

--- a/가상 면접 사례로 배우는 대규모 시스템 설계 기초/01_사용자 수에 따른 규모 확장성.md
+++ b/가상 면접 사례로 배우는 대규모 시스템 설계 기초/01_사용자 수에 따른 규모 확장성.md
@@ -14,19 +14,82 @@
 * 대규모 애플리케이션을 지원하는 데는 수평적 규모 확장법이 보다 적절하다.
 * **로드 밸런서**
   * 로드밸런서는 부하 분산 집합(load balancing set)에 속한 웹 서버들에게 트래픽 부하를 고르게 분산하는 역할을 한다.
-    
+* **데이터베이스 다중화**
+  * 많은 데이터베이스 관리 시스템이 다중화를 지원한다. 보통은 서버 사이에 주(master)-부(slave) 관계를 설정하고 데이터 원본은 주 서버에, 사본은 부 서버에 저장하는 방식이다.
+  * 데이터베이스를 다중화하면 다음과 같은 이득이 있다.
+    * 더 나은 성능
+    * 안정성(realiability)
+    * 가용성(availability)
+   * 응답 시간 개선
+     * 응답 시간은 캐시(cache)를 붙이고 정적 콘텐츠를 콘텐츠 전송 네트워크(Content Delivery Network, CDN)로 옮기면 개선할 수 있다.
 ## 📗 캐시
-
+캐시는 값비싼 연산 결과 또는 자주 참조되는 데이터를 메모리 안에 두고, 뒤이은 요청이 보다 빨리 처리될 수 있도록 하는 저장소다. 애플리케이션의 성능은 데이터베이스를 얼마나 자주 호출하느냐에 크게 좌우되는데, 캐시는 그런 문제를 완화할 수 있다.
+* **캐시 계층**
+  * 캐시 계층은 데이터가 잠시 보관되는 곳으로 데이터베이스보다 훨씬 빠르다.
+  * 캐시 우선 읽기 전략(read-through caching strategy)
+* **캐시 사용 시 유의할 점**
+  * 캐시는 어떤 상황에 바람직한가?
+  * 어떤 데이터를 캐시에 두어야 하는가?
+  * 캐시에 보관된 데이터를 어떻게 만료(expire)되는가?
+  * 일관성(consistency)은 어떻게 유지되는가?
+  * 장애에는 어떻게 대처할 것인가?
+  * 캐시 메모리는 얼마나 크게 잡을 것인가?
+  * 데이터 방출(eviction) 정책은 무엇인가?
+ 
 ## 📗 콘텐츠 전송 네트워크(CDN)
+CDN은 정적 콘텐츠를 전송하는 데 쓰이는, 지리적으로 분산된 서버의 네트워크이다. 이미지, 비디오, CSS, JavaScript 파일 등을 캐시할 수 있다.
+* **CDN 사용 시 고려해야 할 사항**
+  * 비용
+  * 적절한 만료 시한 설정
+  * CDN 장애에 대한 대처 방안
+  * 콘텐츠 무효화(invalidation) 방법
 
 ## 📗 무상태(stateless) 웹 계층
+웹 계층을 수평적으로 확장하려면 상태 정보(사용자 세션 데이터와 같은)를 웹 계층에서 제거해야 한다.
+* **상태 정보 의존적인 아키텍처**
+  * 상태 정보를 보관하는 서버는 클라이언트 정보, 즉 상태를 유지하여 요청들 사이에 공유되도록 한다. 무상태 서버에는 이런 장치가 없다.
+* 무상태 아키텍처
+  * 공유 저장소는 관계형 데이터베이스일 수도 있고, Memcached/Redis 같은 캐시 시스템일 수도 있으며, NoSQL일 수도 있다.
 
 ## 📗 데이터 센터
+장애가 없는 상황에서 사용자는 가장 가까운 데이터 센터로 안내되는데, 통상 이 절차를 지리적 라우팅(geoDNS-routing 또는 geo-routing)이라고 부른다.
+지리적 라우팅에서의 geoDNS는 사용자의 위치에 따라 도메인 이름을 어떤 IP 주소로 변환할지 결정할 수 있도록 해주는 DNS 서비스다.
+* 다중 데이터센터 아키텍처를 만들려면 몇 가지 기술적 난제를 해결해야 한다.
+  * 트래픽 우회
+  * 데이터 동기화(synchronization)
+  * 테스트와 배포(deployment)
 
 ## 📗 메시지 큐
+메시지 큐는 메시지의 무손실(durability, 즉 메시지 큐에 일단 보관된 메시지는 소비자가 꺼낼 때까지 안전히 보관된다는 특성)을 보장하는, 비동기 통신을 지원하는 컴포넌트다.</br>
+메시지 큐를 이용하면 서비스 또는 서버 간 결합이 느슨해져서, 규모 확장성이 보장되어야 하는 안정적 애플리케이션을 구성하기 좋다.
 
 ## 📗 로그, 매트릭 그리고 자동화
+* 로그
+* 메트릭: 메트릭을 잘 수집하면 사업 현황에 관한 유용한 정보를 얻을 수 있고, 시스템의 현재 상태를 손쉽게 파악할 수도 있다.(호스트 단위 메트릭/종합 메트릭/핵심 비즈니스 메트릭)
+* 자동화: 시스템이 크고 복잡해지면 생산성을 높이기 위해 자동화 도구를 활용해야 한다.
 
 ## 📗 데이터베이스의 규모 확장
-
+데이터베이스의 규모를 확장하는 데는 두 가지 접근법이 있다. 하나는 수직적 규모 확장법이고 다른 하나는 수평적 규모 확장법이다.
+* **수직적 확장**
+  * 스케일 업이라고도 부르는 수직적 규모 확장법은 기존 서버에 더 많은, 또는 고성능의 자원(CPU, RAM, 디스크 등)을 증설하는 방법이다.
+  * 단점
+    * 데이터베이스 서버 하드웨어에는 한계가 있으므로 CPU, RAM 등을 무한 증설할 수는 없다. 사용자가 계속 늘어나면 한 대 서버로는 결국 감당하기 어렵게 될 것이다.
+    * SPOF(Single Point Of Failure)로 인한 위험성이 크다.
+    * 비용이 많이 든다. 고성능 서버로 갈수록 가격이 올라가기 마련이다.
+* **수평적 확장**
+  * 데이터베이스의 수평적 확장은 샤딩(sharding)이라고도 부르는데, 더 많은 서버를 추가함으로써 성능을 향상시킬 수 있도록 한다.
+  * 샤딩 전략을 구현할 때 고려해야 할 가장 중요한 것은 샤딩 키를 어떻게 정하느냐 하는 것이다. 샤딩키는 파티션 키라고도 부르는데, 데이터가 어떻게 분산될지 정하는 하나 이상의 칼럼으로 구성된다.
+  * 샤딩을 도입하면 시스템이 복잡해지고 풀어야 할 새로운 문제도 생긴다.
+    * 데이터의 재 샤딩(resharding)
+    * 유명인사(celebrity) 문제
+    * 조인과 비정규화(join and de-normalization)
+ 
 ## 📗 백만 사용자, 그리고 그 이상
+* 웹 계층은 무상태 계층으로
+* 모든 계층에 다중화 도입
+* 가능한 한 많은 데이터를 캐시할 것
+* 여러 데이터 센터를 지원할 것
+* 정적 콘텐츠는 CDN을 통해 서비스할 것
+* 데이터 계층은 샤딩을 통해 그 규모를 확장할 것
+* 각 계층은 독립적 서비스로 분할할 것
+* 시스템을 지속적으로 모니터링하고, 자동화 도구들을 활용할 것
