--- a/단위 테스트/02_단위 테스트란 무엇인가.md
+++ b/단위 테스트/02_단위 테스트란 무엇인가.md
@@ -1,7 +1,11 @@
 ## ✅ 2.1 '단위 테스트'의 정의
 * **격리 문제에 대한 런던파의 접근**
+  * 런던파에서는 테스트 대상 시스템을 협력자에게서 격리하는 것을 일컫는다. 즉, 하나의 클래스가 다른 클래스 또는 여러 클래스에 의존하면 이 모든 의존성을 테스트 대역으로 대체해야 한다.
+  * ✏️ 목은 테스트 대상 시스템과 협력자 간의 상호 작용을 검사할 수 있는 특별한 테스트 대역이다.
+    * 테스트 대역은 실행과 관련 없이 모든 종류의 가짜 의존성을 설명하는 포괄적인 용어다.
+    * 목은 그러한 의존성의 한 종류일 뿐이다.
 * **격리 문제에 대한 고전파의 접근**
-
+  * 고전적인 방법에서 코드를 꼭 격리하는 방식으로 테스트해야 하는 것은 아니다. 대신 단위 테스트는 서로 격리해서 실행해야 한다. 이렇게 하면 테스트를 어떤 순서로든 가장 적합한 방식으로 실행할 수 있으며 서로의 결과에 영향을 미치지 않는다.
 ## ✅ 2.2 단위 테스트의 런던파와 고전파
 * **고전파와 런던파가 의존성을 다루는 방법**
 
