03_단위 테스트 구조

--- a/단위 테스트/03_단위 테스트 구조.md
+++ b/단위 테스트/03_단위 테스트 구조.md
@@ -1,16 +1,31 @@
 ## ✅ 3.1 단위 테스트를 구성하는 방법
 * **AAA 패턴 사용**
+  * 각 테스트를 준비, 실행, 검증이라는 세 부분으로 나눌 수 있다.
+  * Given-When-Then 패턴에 차이는 없다. 프로그래머가 아닌 사람에게 이 구조가 더 읽기 쉽다.
 * **여러 개의 준비, 실행, 검증 구절 피하기**
+  * 보통 [테스트 준비] -> [실행] -> [검증] -> [좀 더 실행] -> [다시 검증] 과 같이 나타난다.
+  * 실행이 하나면 테스트가 단위 테스트 범주에 있게끔 보장하고, 간단하고, 빠르며, 이해하기 쉽다. 일련의 실행과 검증이 포함된 테스트를 보면 리팩터링하라. 각 동작을 고유의 테스트로 도출하라.
 * **테스트 내 if 문 피하기**
+  * if문이 있는 단위 테스트는 안티패턴이다.
+  * if문은 테스트가 한 번에 너무 많은 것을 검증한다는 표시다. 그러므로 이러한 테스트는 반드시 여러 테스트로 나눠야 한다.
 * **각 구절은 얼마나 커야 하는가?**
+  * 준비 구절이 가장 큰 경우: 훨씬 커지면 같은 테스트 클래스 내 비공개 메서드 또는 별도의 팩토리 클래스로 도출하는 것이 좋다.
+  * 실행 구절이 한 줄 이상인 경우를 경계하라.: 실행 구절이 두 줄 이상인 경우 SUT의 공개 API에 문제가 있을 수 있다.
+  * 불변 위반을 발생시키지 않기 위해 코드 캡슐화를 항상 지키자.
 * **검증 구절에는 검증문이 얼마나 있어야 하는가**
+  * 단위 테스트의 단위는 동작의 단위이고, 단일 동작 단위는 여러 결과를 낼 수 있다. 하지만 검증 구절이 너무 커지는 것은 경계해야 한다.
 * **종료 단계는 어떤가**
+  * 준비, 실행, 검증 이후의 네 번째 구절로 종료 구절을 따로 구분하기도 한다. 예를들면 테스트에 의해 작성된 파일을 지우거나 데이터베이스 연결을 종료하고자 이 구절을 사용할 수 있다.
 * **테스트 대상 시스템 구별하기**
+  * 동작은 여러 클래스에 걸쳐 있을 만큼 클 수도 있고 단일 메서드로 작을 수도 있다. 그러나 진입점은 오직 하나만 존재할 수 있다.
+  * 따라서 SUT를 의존성과 구분하는 것이 중요하다.
 * **준비, 실행, 검증 주석 제거하기**
-
+  * 의존성에서 SUT를 떼어내는 것이 중요하듯이, 테스트 내에서 특정 부분이 어떤 구절에 속해 있는지 파악하는 데 시간을 많이 들이지 않도록 세 구절을 서로 구분하는 것 역시 중요하다.
+  * 이를 위해 주석을 달자.
 ## ✅ 3.2 xUnit 테스트 프레임워크 살펴보기
 
 ## ✅ 3.3 테스트 간 테스트 픽스처 재사용
+* ✏️ 테스트 픽스처: 테스트 픽스처는 테스트 실행 대상 객체다. 이 객체는 정규 의존성, 즉 SUT로 전달되는 인수다.
 * **테스트 간의 높은 결합도는 안티 패턴이다**
 * **테스트 가독성을 떨어뜨리는 생성자 사용**
 * **더 나은 테스트 픽스처 재사용법**
