03_단위 테스트 구조

--- a/단위 테스트/03_단위 테스트 구조.md
+++ b/단위 테스트/03_단위 테스트 구조.md
@@ -26,17 +26,39 @@
 
 ## ✅ 3.3 테스트 간 테스트 픽스처 재사용
 * ✏️ 테스트 픽스처: 테스트 픽스처는 테스트 실행 대상 객체다. 이 객체는 정규 의존성, 즉 SUT로 전달되는 인수다.
+  * 테스트 픽스처를 재사용하는 첫 번째 방법은 테스트 생성자에서 테스트 픽스처를 초기화 하는 것이다. 그러나 이 기법은 두 가지 단점이 있다.
+    * 테스트 간 결합도가 높아진다.
+    * 테스트 가독성이 떨어진다.
 * **테스트 간의 높은 결합도는 안티 패턴이다**
+  * 테스트를 수정해도 다른 테스트에 영향을 주어서는 안된다.
+  * 테스트 클래스에 공유 상태를 두지 말아야 한다.
 * **테스트 가독성을 떨어뜨리는 생성자 사용**
+  * 테스트만 보고는 더 이상 전체 그림을 볼 수 없다. 테스트 메서드가 무엇을 하는지 이해하려면 클래스의 다른 부분도 봐야 한다.
 * **더 나은 테스트 픽스처 재사용법**
-
+  * 다른 방법은 예제와 같이 테스트 클래스에 비공개 팩토리 메서드를 두는 것이다
+  * 공통 초기화 코드를 비공개 팩토리 메서드로 추출해 테스트 코드를 짧게 하면서, 동시에 테스트 진행 상황에 대한 전체 맥락을 유지할 수 있다. 게다가 비공개 메서드를 충분히 일반화하는 한 테스트가 서로 결합되지 않는다.
 ## ✅ 3.4 단위 테스트 명명법
 * **단위 테스트 명명 지침**
+  * [테스트 대상 메서드]_ [시나리오]_[예상결과]: 이 관습은 동작 대신 구현 세부 사항에 집중하게끔 부추기기 때문에 분명히 도움이 되지 않는다.
+  * 테스트가 정확히 무엇을 검증하는지, 비즈니스 요구 사항과 어떤 관련이 있는지 파악하려면 머리를 더 써야 한다. 별 것 아닌 것처럼 보일지도 모르지만, 시간이 지날수록 정신적으로 부담이 가중되며, 전체 테스트 스위트의 유지비가 천천히 늘어난다.
+  * 표현력 있고 읽기 쉬운 테스트 이름을 지으려면 다음과 같은 지침을 따르자.
+    * 엄격한 명명 정책을 따르지 않는다. 복잡한 동작에 대한 높은 수준의 설명을 이러한 정책의 좁은 상자 안에 넣을 수 없다. 표현의 자유를 허용하자.
+    * 문제 도메인에 익숙한 비개발자들에게 시나리오를 설명하는 것처럼 테스트 이름을 짓자. 도메인 전문가나 비즈니스 분석가가 좋은 예다.
+    * 단어를 밑줄(_) 표시로 구분한다. 그러면 특히 긴 이름에서 가독성을 향상시키는 데 도움이 된다.
 * **예제: 지침에 따른 테스트 이름 변경**
 
 ## ✅ 3.5 매개변수화된 테스트 리팩터링하기
 * **매개변수화된 테스트를 위한 데이터 생성**
 
 ## ✅ 3.6 검증문 라이브러리를 사용한 테스트 가독성 향상
+* 테스트 가독성을 높이기 위한 방법 중, 검증문 라이브러리를 사용하는 것을 들 수 있다.
+* Fluent Assertions 라이브러리는 숫자, 문자열, 컬렉션, 날짜 및 시간 등에 대해 검증할 수 있는 수많은 헬퍼 메서드를 제공한다. 유일한 단점은 프로젝트에 의존성을 추가해야 한다는 것이다.
 
 ## ✅ 요약
+* 모든 단위 테스트는 AAA패턴(주비, 실행, 검증)을 따라야 한다.
+* 실행 구절이 한 줄 이상이면 SUT의 API에 문제가 있다는 뜻이다.
+* SUT의 이름을 sut로 지정해 SUT를 테스트에서 구별하자.
+* 테스트 픽스처 초기화 코드는 생성자에 두지 말고 팩토리 메서드를 도입해서 재사용하자.
+* 엄격한 테스트 명명 정책을 시행하지 말라.
+* 매개변수화된 테스트로 유사한 테스트에 필요한 코드의 양을 줄일 수 있다.
+* 검증문 라이브러리를 사용하면, 쉬운 영어처럼 읽도록 검증문에서 단어 순서를 재구성해 테스트 가독성을 더욱 향상시킬 수 있다.
