--- a/단위 테스트/04_좋은 단위 테스트의 4대 요소.md
+++ b/단위 테스트/04_좋은 단위 테스트의 4대 요소.md
@@ -39,9 +39,18 @@
 
 ## ✅ 4.4 이상적인 테스트를 찾아서 
 * **이상적인 테스트를 만들 수 있는가?**
+  * 이상적인 테스트는 회귀 방지, 리팩터링 내성, 빠른 피드백, 유지 보수성 이 네 가지 특성 모두에서 최대 점수를 받는 테스트다.
+  * 그런 이상적인 테스트를 만드는 것은 불가능하다. 처음 세 가지 특성인 회귀 방지, 리팩터링 내성, 빠른 피드백은 상호 배타적이기 때문이다. 셋 중 하나를 희생해야 나머지 둘을 최대로 할 수 있다.
 * **극단적인 사례 1: 엔드 투 엔드 테스트**
+  * 엔드 투 엔드 테스트는 많은 코드를 테스트하므로 회귀 방지를 훌륭히 해낸다.
+  * 또한 엔드 투 엔드 테스트는 거짓 양성에 면역이 돼 리팩터링 내성도 우수하다. 리팩터링은 (올바르게 했다면) 식별할 수 있는 동작을 변경하지 않으므로 엔드 투 엔드 테스트에 영향을 미치지 않는다.
+  * 그러나 엔드 투 엔드 테스트는 속도가 느리다는 단점이 존재한다.
 * **극단적인 사례 2: 간단한 테스트**
+  * 간단한 테스트는 매우 빠르게 실행되고 빠른 피드백을 제공한다. 또한 거짓 양성이 생길 가능성이 상당히 낮기 때문에 리팩터링 내성도 우수하다.
+  * 그러나 기반 코드에 실수할 여지가 많지 않기 때문에 간단한 테스트는 회귀를 나타내지 않을 것이다.
 * **극단적인 사례 3: 깨지기 쉬운 테스트**
+  * 깨지기 쉬운 테스트는 실행이 빠르고 회귀를 잡을 가능성이 높지만 거짓 양성이 많은 테스트를 의미한다.
+  * 이는 리팩터링을 견디지 못하고, 해당 기능이 고장 났는지 여부와 관계없이 빨간색으로 바뀐다.
 * **이상적인 테스트를 찾아서: 결론**
 
 ## ✅ 4.5 대중적인 테스트 자동화 개념 살펴보기
