04_좋은 단위 테스트의 4대 요소

--- a/단위 테스트/04_좋은 단위 테스트의 4대 요소.md
+++ b/단위 테스트/04_좋은 단위 테스트의 4대 요소.md
@@ -52,9 +52,38 @@
   * 깨지기 쉬운 테스트는 실행이 빠르고 회귀를 잡을 가능성이 높지만 거짓 양성이 많은 테스트를 의미한다.
   * 이는 리팩터링을 견디지 못하고, 해당 기능이 고장 났는지 여부와 관계없이 빨간색으로 바뀐다.
 * **이상적인 테스트를 찾아서: 결론**
+  * 좋은 단위 테스트의 세 가지 특성(회귀 방지, 리팩터링 내성, 빠른 피드백)은 상호 배타적이다. 이 세 가지 특성 중 두 가지를 극대화하는 테스트를 만들기는 매우 쉽지만, 나머지 특성 한 가지를 희생해야만 가능하다.
+  * 안타깝게도 세 가지 특성 모두 완벽한 점수를 얻어서 이상적인 테스트를 만드는 것은 불가능하다.
 
 ## ✅ 4.5 대중적인 테스트 자동화 개념 살펴보기
 * 테스트 피라미드 분해
+  * 테스트 피라미드는 테스트 스위트에서 테스트 유형 간의 일정한 비율을 일컫는 개념이다.
+    * 단위 테스트
+    * 통합 테스트
+    * 엔드 투 엔드 테스트
 * 블랙박스 테스트와 화이트 테스트 간의 선택
+  * 블랙박스 테스트: 시스템의 내부 구조를 몰라도 시스템의 기능을 검사할 수 있는 소프트웨어 테스트 방법이다.
+  * 화이트박스 테스트: 애플리케이션의 내부 작업을 검증하는 테스트 방식
+  * 화이트 박스 테스트 -> 회귀 방지: 좋음, 리팩터링 내성: 나쁨
+  * 블랙박스 테스트 -> 회귀 방지: 나쁨, 리팩터링 내성: 좋음
 
 ## ✅ 요약
+* 좋은 단위 테스트에는 단위 테스트, 통합 테스트, 엔드 투 엔드 테스트 등 자동화된 테스트를 분석하는 데 사용할 수 있는 네 가지 기본 특성이 있다.
+  * 회귀 방지
+  * 리팩터링 내성
+  * 빠른 피드백
+  * 유지 보수성
+* 회귀 방지는 테스트가 얼마나 버그(회귀)의 존재를 잘 나타내는지에 대한 척도다. 테스트가 코드를 더 많이 실행할수록 테스트에서 버그가 드러날 확률이 더 높아진다.
+* 리팩터링 내성은 테스트가 거짓 양성을 내지 않고 애플리케이션 코드 리팩터링을 유지할 수 있는 정도를 의미한다.
+* 거짓 양성은 허위 경보다. 즉, 테스트가 실패했다고 나타내지만 그 기능은 의도한대로 작동한다. 거짓 양성은 테스트 스위트에 치명적인 영향을 줄 수 있다.
+* 거짓 양성은 테스트 대상 시스템의 내부 구현 세부 사항과 테스트 간의 강결합의 결과다.
+* 회귀 방지와 리팩터링 내성은 테스트 정확도에 기여한다.
+* 거짓 양성은 프로젝트 초기에 부정적인 영향을 미치지는 않지만 프로젝트가 성장함에 따라 점점 더 중요해진다. 즉, 거짓 음성만큼 중요하다.
+* 빠른 피드백은 테스트가 얼마나 빨리 실행되는지에 대한 척도다.
+* 유지 보수성은 두 가지 요소로 구성된다. 테스트 이해 난이도, 테스트 실행 난이도
+* 테스트의 가치 추정치는 네 가지 특성 각각에서 얻은 점수의 곱이다. 따라서 특성 중 하나라도 0이면, 테스트 가치도 0이 된다.
+* 처음 세 가지 특성(회귀 방지, 리팩터링 내성, 빠른 피드백)은 상호 배타적이기 때문에 네 가지 특성 모두 최대 점수를 받는 것은 불가능하다.
+* 리팩터링 내성은 타협할 수 없다.
+* 테스트 피라미드는 단위 테스트, 통합 테스트, 엔드 투 엔드 테스트의 일정한 비율을 일컫는다. 엔드 투 엔드 테스트가 가장 적고, 단위 테스트가 가장 많으며, 통합 테스트는 그 중간 정도라 할 수 있다.
+* 피라미드에서는 테스트 유형마다 빠른 피드백과 회귀 방지 사이에서 다른 선택을 한다. 엔드 투 엔드 테스트는 회귀 방지를 선호하는 데 반해, 단위 테스트는 빠른 피드백을 선호한다.
+* 테스트를 작성할 때는 블랙박스 테스트 방법을 사용하라. 테스트를 분석할 때는 화이트박스 방법을 사용하라.
